--- a/ok/rm/rm03-0.3.0.0.0.md
+++ b/ok/rm/rm03-0.3.0.0.0.md
@@ -66,7 +66,7 @@ graph TB
 
 ### 2、运行：
 
-血的运行推动力以心气为主，宗气为辅助。脾气可以约束血在脉道中运行而不溢出脉外。
+血的运行推动力以心气为主，宗气为辅助。脾气可以约束血在脉道中运行而不溢出脉外，这里的脉相当于现代的血管。
 
 血与气相比，血为阴，有被动性；气为阳，有主动性。所以血的运行是由气推动的，如果气不足，则无力推动血的运行。
 
