--- a/ok/rm/rm03-0.5.0.0.0.md
+++ b/ok/rm/rm03-0.5.0.0.0.md
@@ -1,4 +1,4 @@
-### 3.5人体的天气和地气:
+# 3.5人体的天气和地气:
 
 前面的津液、血、元气是分别叙述，如果将这几种要素整合起来形成人体的平衡的内环境，就形成了人体的天地。
 
@@ -18,7 +18,7 @@
 
 下面分别介绍人体的天气和地气。
 
-### 1、人体天气
+## 1、人体天气
 
 人体的天气指的是人体中的气态物质，以水蒸汽和气雾状营养物质的形态，存在于经络、腠理以及各种空腔器官、孔窍等处。从功能上主要分为以下几种：宗气、营气、卫气、脏腑之气
 
@@ -100,7 +100,7 @@
 
 ##### 与血的关系：
 
-营气是气态物质，血是液态物质。营气循行于经络之中，与血关系密切。营气注入脉中，就成为血的组成部分。反之，若不注入脉，则是气态物质。
+营气是气态物质，血是液态物质。营气循行于经络之中，与血关系密切。营气注入脉中，就成为血的组成部分。反之，若不注入脉，则是气态物质。所以可以把营气理解为气态的血，血理解为液态的营气。
 
 血循行于血管脉道中，营气循行于经络中，两者不可混为一谈。
 
@@ -110,7 +110,7 @@
 >
 > **营气者，泌其津液，注之于脉，化以为血(1),以荣四末，内注五藏六府，以应刻数焉⑴。**...
 >
-> 营气柔和，循行于经脉之中，**与津液相和合**，**化生为血液**。营气与血，同行脉中，营气为血的组成部分，**血液由营气和合津液**变化而成，**营气与血，可分而不可离**，故常“营血”并称。...
+> 营气柔和，循行于经脉之中，**与津液相和合，化生为血液**。营气与血，同行脉中，营气为血的组成部分，**血液由营气和合津液**变化而成，**营气与血，可分而不可离**，故常“营血”并称。...
 >
 > **营气之道。内谷为宝(1)。谷入于胃，乃传之肺，流溢于中，布散于外(2)。精专者，行于经隧，常营无已，终而复始，是谓天地之纪(3)。**...
 >
@@ -144,7 +144,7 @@
 
 晚上走脏器二十五周，顺序是肾、心、肺、肝、脾、肾
 
-卫气的循行决定睡眠。
+卫气的循行与睡眠有交密切关系。
 
 > 本篇下文指出，卫气一日一夜，循行五十周次，白天行于阳分二十五周，夜间行于阴分二十五周。
 >
@@ -202,15 +202,33 @@
 >
 > 《中医药学概论--肝、胆》
 
-从物质角度看，营气、卫气为饮食转化而来，即阳中之阴。宗气为自然之气和营卫之气的混合体。
+#### 1.6、小结：
 
-从能量角度看，人体天气也应有风、热、暑、湿、燥、寒六气。人体的天气如果受自然界六气影响过大，可造成人体天气失衡发病，因此中医病因中有外感六淫之说，淫即太过之意。反过来理解，此六气如果不过量，则对健康的人体并无害处。
+营卫之气行于经络，由此可见，经络应为气态物质的运行通道，存在于各种组织器官的间隙之中。如内经说卫气“**循皮肤之中，分肉之间，熏于肓膜，散于胸腹**”，张景岳说“凡腔腹肉理之间，上下**空隙**之处，皆谓之肓”。
 
-### 2、人体地气
+营卫二气互相配合，营气负责营养，卫气负责温煦与护卫。两者配合不协调，则发生营卫不和的疾病。例如《伤寒论》的太阳中风证，为太阳区域受风邪侵袭，造成卫强而营弱的情况，表现为头痛、发热、汗出、怕风，用桂枝汤调和营卫治疗。
+
+营卫之气来自水谷之气。水谷本为固液态，在脏腑元气的作用下成为津血，进而化为气态的营卫。这种固液态与气态的相互转化，体现了阴阳互根互用的原理，与自然界太阳照射海水，蒸汽升而为云的现象很相似。
+
+足够的元气作用津血，可以产生足够的营卫之气。反之，无论元气不足还是津血不足，都不能产生足够的营卫之气，也就是气虚。
+
+> 是故五脏主藏精者也，不可伤，伤则失守而阴虚；**阴虚则无气，无气则死矣**。
+>
+> 《黄帝内经灵枢-本神》
+
+宗气由吸入的自然之气与营卫之气混合而成，因此高质量的呼吸有利于宗气的形成。
+
+> 古有真人者，提挈天地，把握阴阳，**呼吸精气**，独立守神，肌肉若一，故能寿敝天地，无有终时，此其道生。
+>
+> 《素问-上古天真论》
+
+## 2、人体地气
 
 #### 2.1、概述
 
-人体地气指人体的固液态物质，包括脏腑、皮肉筋骨、津液、血等。这些固液态物质与前面的气态物质进行物质和能量交互，类似自然界天地气交、云升雨降的过程。
+人体地气指人体的固液态物质，包括脏腑、皮肉筋骨、津液、血等。其中的津液、血已经在前面章节叙述过了。
+
+这些固液态物质与气态物质进行物质和能量交互，类似自然界天地气交、云升雨降的过程。
 
 从物质角度看，人的血、津液中含有空气中传入的氧等物质。人体的营卫等气态物质是饮食而入的固液态物质转化而成。
 
@@ -312,7 +330,19 @@
 
 
 
+## 3、总结
+
+人体的元气、天气、地气外应自然界的阳光、空气、大地。人体从能量分配角度分三阴三阳六大区域，相应人体的气态物质流转于相应区域的时候，就称为对应的六气。比如厥阴区域的气为风，少阴区域的气为热，太阴区域为湿，少阳区域为相火（对应暑），阳明区域为燥，太阳为寒。
+
+> **厥阴之上，风气主之；少阴之上，热气主之；太阴之上，湿气主之；少阳之上，相火主之：阳明之上；燥气主之；太阳之上，寒气主之。所渭本也，是谓六元。**
+>
+> 《素问·天元正纪大论》
+
+天气与地气对应，风对木，热暑对火，湿对土，燥对金，寒对水，所以厥阴风木、少阳相火、少阴君火、阳明燥金、太阳寒水的名词来表示六大区域。
+
 总的来说，在元气作用下，人体的固、液、气三类物质的形态相互转换；能量状态在时间维度上波动，在空间维度上各有差异，这种波动和差异又都在各自的平衡范围内，从而形成了人体的适宜内环境。这是根据“天人合一”的道理，通过观察大自然推导出的人体规律。
+
+
 
 ## 题目
 
