--- a/ok/rm/rm03-0.6.0.0.0.md
+++ b/ok/rm/rm03-0.6.0.0.0.md
@@ -1,6 +1,6 @@
 ## 3.6精
 
-### 位置：
+### 1、位置：
 
 全身及脏腑都有，以五脏为主。其中肾比较特殊，是精的大仓库。其它脏腑精不足需要肾精补充，精足可以传输到肾藏起来。
 
@@ -12,7 +12,7 @@
 >
 > 《素问•上古天真论》
 
-### 分类：
+### 2、分类：
 
 精分为先天之精和后天之精。通常情况下，我们说精的时候，指的是两者皆包括。如需特殊说明，需要明确指出是先天之精还是后天之精。
 
@@ -24,7 +24,7 @@
 >
 > 《黄帝内经讲解-藏象学说-五脏功能与形体组织、四时阴阳的关系》
 
-#### 后天之精：
+#### 2.1、后天之精：
 
 “所谓五脏者，藏精气而不泻也，故满而不能实。六腑者，传化物而不藏，故实而不能满也。”
 
@@ -38,19 +38,19 @@
 >
 > 《黄帝内经讲解-五脏六腑皆禀气于胃》
 
-##### 来源：
+##### 2.1.1、来源：
 
 来源于脾胃运化的水谷之精微，脾胃对食物进行消化吸收后而获得，胃主消化，脾主吸收。
 
-##### 使用：
+##### 2.1.2、使用：
 
 脾将精传输到五脏六腑，化为脏腑之精气，维持各脏腑功能活动，多余的收藏于肾
 
-##### 判断标准：
+##### 2.1.3、判断标准：
 
 饮食是否正常、大便是否正常
 
-##### 不同年龄的变化
+##### 2.1.4、不同年龄的变化
 
 16岁以前是因为形体不足，不能吸收大量的食物精微。
 
@@ -58,13 +58,13 @@
 
 ![](img/houtian.svg)
 
-#### 先天之精
+#### 2.2、先天之精
 
-##### 来源：
+##### 2.2.1、来源：
 
 与生俱来,父母给予
 
-##### 作用：
+##### 2.2.2、作用：
 
 帮助后天之精的产生
 
@@ -72,7 +72,7 @@
 
 是人体正常寿命的主要标志，
 
-##### 不同年龄的变化
+##### 2.2.3、不同年龄的变化
 
 普通人先天之精只能消耗，极难补充。
 
@@ -80,13 +80,13 @@
 
 
 
-#### 肾精：
+#### 2.3、肾精：
 
-##### 来源：
+##### 2.3.1、来源：
 
 先天之精加后天之精
 
-##### 功能：
+##### 2.3.2、功能：
 
 1、产生元气：
 
@@ -170,7 +170,7 @@
 > 《素问•生气通天论》
 >
 
-##### 不同年龄的变化
+##### 2.3.3、不同年龄的变化
 
 丈夫八岁，肾气实，髮长齿更，
 
@@ -196,7 +196,7 @@
 
 
 
-##### 判断多少：
+##### 2.3.4、判断多少：
 
 男子溢精，女子月经来潮
 
@@ -222,7 +222,7 @@
 >
 > 《黄帝内经讲解-寿夭与先后天的关系》
 
-##### 肾精出入图
+##### 2.3.5、肾精出入图
 
 下图表示了肾精的出入情况
 
@@ -230,7 +230,7 @@
 
 
 
-### 精的重要性
+### 3、精的重要性
 
 精之所以为精华是有其深刻道理的，精既可以转换为身体的阴也可以转换为身体的阳。身体阴不足的时候，精可以转换为津液、血液，身体阳不足的时候，精可以转换阳气。因此，如果精足的话，人就不虚，因为无论身体各处的阴虚、阳虚，都可以通过精的转化来补充。
 
@@ -251,7 +251,7 @@
 
 
 
-### 资料
+### 4、资料
 
 > 肾藏精，是说肾对人体之精气具有封藏的作用
 >
