--- a/ok/rm/rm03-0.7.0.0.0.md
+++ b/ok/rm/rm03-0.7.0.0.0.md
@@ -1,6 +1,6 @@
 ## 3.7神
 
-### 简介：
+### 1、简介：
 
 教材对神的定义分广义和狭义。
 
@@ -20,7 +20,7 @@
 
 个人理解神应该是人的气、血、津液、形体的管理者。
 
-### 生成：
+### 2、生成：
 
 人的气血、五脏发育完成，神就自然生成。所谓“神气舍心、魂魄毕具，乃成为人”
 
@@ -28,7 +28,7 @@
 >
 > 《黄帝内经讲解-神的产生及其物质基础》
 
-### 功能：
+### 3、功能：
 
 魂魄在教材中没有详细谈，比如对于魄，只提到是人的本能活动与低级反应，但是具体什么本能活动、哪些低级反应？并没有详细交代。所以这里参考了一些道家经典《云笈七签》、《抱朴子》的内容
 
@@ -42,7 +42,7 @@
 
 神对形体的健康有重要作用，能作用于五脏的功能活动，保证脏腑安和，增强抗病能力。
 
-#### 低级管理功能（魄）：
+#### 3.1、低级管理功能（魄）：
 
 魄是神的一种，传统上称“七魄”
 
@@ -56,7 +56,7 @@
 >
 > 《云笈七签》
 
-#### 高级管理功能（魂）：
+#### 3.2、高级管理功能（魂）：
 
 魂也是神的一种，传统上称“三魂”
 
@@ -80,7 +80,7 @@
 >
 > 《云笈七签》
 
-##### 人的意识与思维
+##### 3.2.1、人的意识与思维
 
 内经对人的意识思维过程有相对详细的描述。就是人对外界刺激（感官）产生印象、存储印象变成记忆、对记忆进行分析比较判断产生思虑，最后形成正常对待事物的智力。
 
@@ -122,7 +122,7 @@
 >
 > 《黄帝内经讲解-神的思维发展过程》
 
-#### 情志：
+### 4、情志：
 
 情，指“七情”，即喜、怒、忧、思、悲、恐、惊。
 
@@ -132,7 +132,7 @@
 
 情志是人体对外界客观事物所做出的反映，是正常的**精神活动**
 
-情志应该是人的意识和思维的结果。
+情志是人的意识和思维的结果。
 
 人的情志活动与五脏有着密切的关系，如肝“在志为怒”，心“在志为喜”，脾“在志为思”，肺“在志为忧”，肾“在志为恐”。
 
@@ -154,9 +154,9 @@
 >
 > 《中医药学概论-病因病机-情志》
 
-### 位置：
+### 5、位置：
 
-​	五脏为主，五脏中又以心为主。
+​	神在人体中的位置以五脏为主，五脏中又以心为主。
 
 > 五脏有七神，各何所藏那？
 >
@@ -227,7 +227,7 @@
 
 将忆念保持下来，即对事物表象认识的积累称为志
 
-### 神的意义：
+### 6、神的意义：
 
 神是身体的管理者，其对人体精、气、血、津液的管理水平决定了人的健康发展趋势，具有非常重要的意义。
 
@@ -245,7 +245,7 @@
 >
 > 《黄帝内经讲解-血气精神的重要作用》
 
-### 什么叫神的调节功能：
+#### 6.1、什么叫神的调节功能：
 
 举个例子，比如一个房间因为某些原因变冷了。这个时候，管理员要加大暖气的输出。但是暖气出了问题，输出功率不够。这就叫阳虚。
 
@@ -257,17 +257,15 @@
 
 发病要请医生，医生准确分析了是哪个房间出现了什么问题，也就是确定病位、病性，通过汤药、针灸扶正祛邪，让房间恢复平衡。这就是治疗。其实，此时医生起到的是神的作用，即调节气血的分配，使其恢复平衡。
 
-
-
-### 神与气血的关系：
+#### 6.2、神与气血的关系：
 
 气血就像金钱，神是管理金钱的人。精气血足，说明人的家底厚，神足说明人管理气血的能力强。精气血神都足的话，人的能力强。
 
 如果神的关注方向向外的比较多，其消耗气血的速度快，中年之后的健康要注意。如果神关注方向向内，是会保养的人，长寿易得。
 
-### 判断神的状态：
+### 7、判断神的状态：
 
-目光精彩、言语清亮、神思不乱、肌肉不削、气息如常、大小便不脱
+中医判断神的状态主要是观察目，其次是语言、思维等等，包括目光精彩、言语清亮、神思不乱、肌肉不削、气息如常、大小便不脱等等。
 
 > *善乎神之义，此死生之本，不可不察也。……以形证言之，则目光精彩，言语清亮，神思不乱，肌肉不削，气息如常，大小便不脱，若此者，虽其脉可疑，尚无足虑，以其形之神在也，”反之则为神去。其中，两目与五色是望神的主要内容。*
 >
@@ -295,13 +293,11 @@
 >
 > 《中医药学概论 - 诊法- 望神》
 
-### 探讨：
+### 8、脑与神的关系：
 
-#### 脑与神的关系：
+现代医学认为人的思维意识是脑的作用。中医也认为脑为元神之府，对精神活动很重要，但中医还认为脑的资源由脏腑提供，因此脏腑功能强健，脑的功能才能正常。脏腑功能衰弱，则脑的功能也下降。以肾藏志为例，志代表人的记忆力。肾的功能下降一段时间后，脑对应记忆的功能也会随之下降。其它脏腑也是如此。
 
-现代医学认为人的思维意识是脑的作用。中医也认为脑对精神活动很重要，但中医还认为脑的资源由脏腑提供，因此脏腑功能强健，脑的功能才能正常。脏腑功能衰弱，则脑的功能也下降。以肾藏志为例，志代表人的记忆力。肾的功能下降一段时间后，脑对应记忆的功能也会随之下降。其它脏腑也是如此。
-
-### 资料：
+### 9、资料：
 
 #### 《黄帝内经讲解》
 
