--- a/ok/bc/bc17-0.2.11.0.0.md
+++ b/ok/bc/bc17-0.2.11.0.0.md
@@ -1,6 +1,6 @@
 ### 狗脊
 
-【原文】 **苦坚肾，甘益血**，能强汗。**温养气。治失溺不节**，肾虚。**脚弱腰痛，寒湿周痹**(1)。  经曰：内不在脏腑，而外未发千皮，独居分肉之间，真气不能周，命曰周痹。**除风虚、强机关、利俛仰**(2) 。滋肾、益肝，则骨健而筋强，**有黄毛如狗形，故曰金毛狗脊。去毛切，酒拌蒸。萆薢为使。熬膏良。**
+【原文】 **苦坚肾，甘益血**，<small>能强汗。</small>**温养气。治失溺不节**，<small>肾虚。</small>**脚弱腰痛，寒湿周痹**(1)。 <small> 经曰：内不在脏腑，而外未发千皮，独居分肉之间，真气不能周，命曰周痹。</small>**除风虚、强机关、利俛仰**(2) 。<small>滋肾、益肝，则骨健而筋强，</small>**有黄毛如狗形，故曰金毛狗脊。去毛切，酒拌蒸。萆薢为使。熬膏良。**
 
 【讲解】 (1) 周痹：痹证的一种。因风寒湿邪侵入血脉肌肉所致的以周身疼痛为主的痹证。(2) 俛：同俯。
 
