--- a/ok/bc/bc17-0.2.13.0.0.md
+++ b/ok/bc/bc17-0.2.13.0.0.md
@@ -1,6 +1,6 @@
 ### 胡芦巴
 
-【原文】   **苦温纯阳，入右肾命门。暖丹田、壮元阳，治肾脏虚冷，阳气不能归元，**同附子、硫黄。**瘕疝冷气**，同茴香、巴戟、川乌、川楝、吴茱萸。**寒湿脚气。出岭南番舶者良，云是番莱菔子。酒浸曝，或蒸或炒。**
+【原文】   **苦温纯阳，入右肾命门。暖丹田、壮元阳，治肾脏虚冷，阳气不能归元，**<small>同附子、硫黄。</small>**瘕疝冷气**，<small>同茴香、巴戟、川乌、川楝、吴茱萸。</small>**寒湿脚气。出岭南番舶者良，云是番莱菔子。酒浸曝，或蒸或炒。**
 
 【讲解】    **胡芦巴性较温热，具温肾、散寒、止痛之功。**为豆科一年生草本植物胡芦巴的成熟种子。现在主要由人工栽培；主产于安徽、四川、河南等地。生用，炒用，或盐水炒用。
 
