--- a/ok/bc/bc17-0.2.19.0.0.md
+++ b/ok/bc/bc17-0.2.19.0.0.md
@@ -1,8 +1,8 @@
 ### 韭菜  韭子
 
-【原文】   **辛温微酸，肝之菜也。入血分而行气， 归心益胃，助肾补阳**，一名土钟乳，言温补也。**除胃热，充肺气，散瘀血，逐停痰。治吐衄损伤，一切血病**， 捣汁童便和服。**噎膈反胃**，能消瘀血停痰在胃口，致反胃及胃脘痛。朱丹溪曰：有食热物及郁怒，致死血留胃口作痛者，宜加韭汁，桔梗入药，开提气血；有肾气上攻，致心痛者，宜韭汁和五芩散为丸，空心茴香汤下；治反胃宜用牛乳加韭汁、姜汁，细细溫服。盖韭汁散淤，姜汁下气消痰和胃，牛乳解热润燥补虚也。《单方总录》曰：食不得入，是有火也；食久反出，是无火也；治法虽有寒热虚实之别，要以安其胃气为本，使阴阳升降平均，呕逆自顺而愈矣。**解药毒食毒，狂犬蛇虫毒。多食昏神。忌蜜、牛肉**。昂按：今入多以韭炒牛肉，其味甚佳，未见作害。经曰：毒药攻邪，五榖为养，五畜为益，五菜为充，五果为助。气味合而服之，以补精益气。五菜：韭、薤、葱、葵、藿也；五果，桃、李、枣、杏、栗也．
+【原文】   **辛温微酸，肝之菜也。入血分而行气， 归心益胃，助肾补阳**，<small>一名土钟乳，言温补也。</small>**除胃热，充肺气，散瘀血，逐停痰。治吐衄损伤，一切血病**， <small>捣汁童便和服。</small>**噎膈反胃**，<small>能消瘀血停痰在胃口，致反胃及胃脘痛。朱丹溪曰：有食热物及郁怒，致死血留胃口作痛者，宜加韭汁，桔梗入药，开提气血；有肾气上攻，致心痛者，宜韭汁和五芩散为丸，空心茴香汤下；治反胃宜用牛乳加韭汁、姜汁，细细溫服。盖韭汁散淤，姜汁下气消痰和胃，牛乳解热润燥补虚也。《单方总录》曰：食不得入，是有火也；食久反出，是无火也；治法虽有寒热虚实之别，要以安其胃气为本，使阴阳升降平均，呕逆自顺而愈矣。</small>**解药毒食毒，狂犬蛇虫毒。多食昏神。忌蜜、牛肉**。<small>昂按：今入多以韭炒牛肉，其味甚佳，未见作害。经曰：毒药攻邪，五榖为养，五畜为益，五菜为充，五果为助。气味合而服之，以补精益气。五菜：韭、薤、葱、葵、藿也；五果，桃、李、枣、杏、栗也。</small>
 
- **韭子，辛甘而温。补肝肾，助命门，暖腰膝。治筋痿遗尿，泄精溺血， 白带白淫**。经曰：足厥阴病则遗尿，思想无穷，入房太甚，发为筋痿及白淫。韭子同龙骨、桑螵蛸，能治诸病，以其入厥阴补肝肾命门。命门者，藏精之府也。**蒸爆炒研用。烧烟熏牙虫**。
+ **韭子，辛甘而温。补肝肾，助命门，暖腰膝。治筋痿遗尿，泄精溺血， 白带白淫**。<small>经曰：足厥阴病则遗尿，思想无穷，入房太甚，发为筋痿及白淫。韭子同龙骨、桑螵蛸，能治诸病，以其入厥阴补肝肾命门。命门者，藏精之府也。</small>**蒸爆炒研用。烧烟熏牙虫**。
 
 【讲解】 **韭菜功能温中、行气、活血；韭子功专暖肾壮阳固精**。韭菜为百合科植物韭的叶，多作食菜用。韭子即韭的种子，主要作药用。
 
