--- a/ok/bc/bc17-0.2.20.0.0.md
+++ b/ok/bc/bc17-0.2.20.0.0.md
@@ -1,6 +1,6 @@
 ### 阳起石
 
-【原文】  **咸温。补右肾命门，治阳痿精乏，子宫虚冷，腰膝冷痹，水肿癥瘕**。寇宗奭曰：凡石药冷热皆有毒，宜酌用。按经曰：石药发癫，芳草发狂，芳草之气美、石药之气悍。工者相遇，恐内伤脾。**出齐州阳起山，云母根也，虽大雪遍境， 此山独无。以云头雨脚鹭鸶毛色白滋润者良**。真者难得。**火煅醋淬七次，研粉，水飞用，亦有用烧酒、樟脑升炼取粉者。桑螵蛸为使。恶泽泻、菌桂。畏菟丝子。忌羊血。**
+【原文】  **咸温。补右肾命门，治阳痿精乏，子宫虚冷，腰膝冷痹，水肿癥瘕**。<small>寇宗奭曰：凡石药冷热皆有毒，宜酌用。按经曰：石药发癫，芳草发狂，芳草之气美、石药之气悍。工者相遇，恐内伤脾。</small>**出齐州阳起山，云母根也，虽大雪遍境， 此山独无。以云头雨脚鹭鸶毛色白滋润者良**。<small>真者难得。</small>**火煅醋淬七次，研粉，水飞用，亦有用烧酒、樟脑升炼取粉者。桑螵蛸为使。恶泽泻、菌桂。畏菟丝子。忌羊血。**
 
 【讲解】    **阳起石功专温肾壮阳**。为硅酸盐类矿物阳起石或阳起石石棉的矿石。主产于湖北、河南、山东等省。全年可采，去净泥土杂质，火煅黄酒淬之，研细用。
 
