--- a/ok/bc/bc17-0.3.1.0.0.md
+++ b/ok/bc/bc17-0.3.1.0.0.md
@@ -1,6 +1,6 @@
 ### 熟地黄
 
-〔原文〕**甘而微温。入手足少阴厥阴经。滋肾水，补真阴，填骨髓，生精血，聪耳明目，**耳为肾窍，目为肝窍，目得血而能视，耳得血而能聪。**黑髮乌髭。治劳伤风痹，胎产百病，为补血之上剂。**朱丹溪曰：产前当清热养血为主，产后宜大补气血为主，虽有杂证，从末治之。昂按：丹溪产后大补气血一语，诚至当不易之论，后人不善用之，多有风寒未解，瘀血未尽，妄施峻补，反致大害者，不可不察。王硕曰：男子多阴虚，宜熟地；女子多血热，宜生地。**以好酒拌砂仁末，浸蒸晒九次用。**地黄性寒，得酒与火与日则温；性泥，得砂仁则和气，且能引入丹田。六味丸用之为君，尺脉弱者加桂附，所谓益火之原，以消阴翳也；尺脉旺者加知柏，所谓壮水之主，以制阳光也。
+〔原文〕**甘而微温。入手足少阴厥阴经。滋肾水，补真阴，填骨髓，生精血，聪耳明目，**<small>耳为肾窍，目为肝窍，目得血而能视，耳得血而能聪。</small>**黑髮乌髭。治劳伤风痹，胎产百病，为补血之上剂。**<small>朱丹溪曰：产前当清热养血为主，产后宜大补气血为主，虽有杂证，从末治之。昂按：丹溪产后大补气血一语，诚至当不易之论，后人不善用之，多有风寒未解，瘀血未尽，妄施峻补，反致大害者，不可不察。王硕曰：男子多阴虚，宜熟地；女子多血热，宜生地。</small>**以好酒拌砂仁末，浸蒸晒九次用。**<small>地黄性寒，得酒与火与日则温；性泥，得砂仁则和气，且能引入丹田。六味丸用之为君，尺脉弱者加桂附，所谓益火之原，以消阴翳也；尺脉旺者加知柏，所谓壮水之主，以制阳光也。</small>
 
 【讲解】**熟地黄功专养血滋阴、补精益髓。**为玄参科多年生草本植物地黄的根，经加工炮制而成。通常以黄酒为辅料，反复蒸晒，至内外色黑，呈滋润光泽，柔软粘腻，切片用。
 
