--- a/ok/bc/bc17-0.2.10.0.0.md
+++ b/ok/bc/bc17-0.2.10.0.0.md
@@ -1,6 +1,6 @@
 ### 杜仲
 
-【原文】   **甘温能补，微辛能润。色紫入肝经气分，润肝燥，补肝虚。子能令母实，故兼补肾。肝充则筋健， 肾充则骨强， 能使筋骨相著**。皮中有丝，有筋骨相著之象。**治腰膝痠痛**， 经曰：腰者肾之府，转移不能，肾将惫矣。膝者筋之府，屈伸不能，筋将惫矣。一少年新娶，得脚软病，且痛甚，作脚气治不效。孙林曰：此肾虚也。用杜仲一两，半酒半水煎服，六日痊愈。按腰痛不已者，属肾虚；痛有定处，属死血；往来走痛，属痰，腰冷身重，遇寒即发，属寒湿；或痛或止，属湿热。而其原多本于肾虚，以腰者肾之府也。**阴下湿痒，小便余沥，胎漏**，怀孕沥血。**胎坠**。惯坠胎者，受孕一两月， 用杜仲八两，糯米煎汤浸透， 炒断丝，续断二两，酒浸，山药六两，为糊丸，或枣肉为丸，米饮下。二药大补肾气，托住胎元，则胎不坠。**出汉中，厚润者良。去粗皮剉，或酥炙、酒炙、蜜炙、盐水炒、姜汁炒，断丝用。恶玄参。**
+【原文】   **甘温能补，微辛能润。色紫入肝经气分，润肝燥，补肝虚。子能令母实，故兼补肾。肝充则筋健， 肾充则骨强， 能使筋骨相著**。<small>皮中有丝，有筋骨相著之象。</small>**治腰膝痠痛**，<small> 经曰：腰者肾之府，转移不能，肾将惫矣。膝者筋之府，屈伸不能，筋将惫矣。一少年新娶，得脚软病，且痛甚，作脚气治不效。孙林曰：此肾虚也。用杜仲一两，半酒半水煎服，六日痊愈。按腰痛不已者，属肾虚；痛有定处，属死血；往来走痛，属痰，腰冷身重，遇寒即发，属寒湿；或痛或止，属湿热。而其原多本于肾虚，以腰者肾之府也。</small>**阴下湿痒，小便余沥，胎漏**，<small>怀孕沥血。</small>**胎坠**。<small>惯坠胎者，受孕一两月， 用杜仲八两，糯米煎汤浸透， 炒断丝，续断二两，酒浸，山药六两，为糊丸，或枣肉为丸，米饮下。二药大补肾气，托住胎元，则胎不坠。</small>**出汉中，厚润者良。去粗皮剉，或酥炙、酒炙、蜜炙、盐水炒、姜汁炒，断丝用。恶玄参。**
 
 【讲解】 **杜仲功专补益肝肾，强壮筋骨，并能安胎**。
 
@@ -11,5 +11,4 @@
 【临证应用】   杜仲用于肝肾不足，腰膝酸痛，萎软无力等证，常与补骨脂、胡桃仁等同用，如青娥丸，以补肝肾，强筋骨。治肝肾虚寒，阳痿，尿频等证，可配山茱萸、免丝子、补骨脂等温补固涩之品。因肝肾亏虚而导致胎元不固者，本品可补肝肾以安胎，用于胎动不安或习惯性流产，可单用或与川断为末，枣肉为丸，如杜仲丸。此外，若与白芍、石决明、夏枯草、黄芩等药同用，治疗肝阳上亢，头目眩晕。近代临床证实，本品降血压作用颇佳，治高血压而有肾虚见证者，最为适宜.
 
 【用量用法】10一15克。大量可用至30一60克，煎服。炒用疗效较生用为佳。
-
 
