--- a/ok/bc/bc17-0.2.22.0.0.md
+++ b/ok/bc/bc17-0.2.22.0.0.md
@@ -1,12 +1,12 @@
 ### 羊肉
 
-【原文】  **甘热属火。补虚劳，益气血，壮阳道， 开胃健力， 通气发疮**。张仲景治虚羸蓐劳，有当归羊肉汤。《十剂》曰：补可去弱，人参、羊肉之属是也。李东垣曰：人参补气，羊肉补形。凡味同羊肉者，皆补血虚，阳生则阴长也。**青羊肝苦寒**。苏颂曰温。色青、**补肝而明目**。肝以泻为补，羊肝丸治目疾加黄连。**胆苦寒。点风泪眼，赤障白翳**。腊月入蜜胆中·, 纸套笼住，悬檐下，待霜出扫去点哏。又入蜜胆中蒸之侯干，研为膏每含少许或点之，名二百味草花膏，以羊食百草、蜂采百花也。李时珍曰：肝开窍于目，胆汁减则目暗，目者肝之外候，胆之精华也，故诸胆皆治目病。
+【原文】  **甘热属火。补虚劳，益气血，壮阳道， 开胃健力， 通气发疮**。<small>张仲景治虚羸蓐劳，有当归羊肉汤。《十剂》曰：补可去弱，人参、羊肉之属是也。李东垣曰：人参补气，羊肉补形。凡味同羊肉者，皆补血虚，阳生则阴长也。</small>**青羊肝苦寒**。<small>苏颂曰温。</small>**色青、补肝而明目**。<small>肝以泻为补，羊肝丸治目疾加黄连。</small>**胆苦寒。点风泪眼，赤障白翳**。<small>腊月入蜜胆中·, 纸套笼住，悬檐下，待霜出扫去点哏。又入蜜胆中蒸之侯干，研为膏每含少许或点之，名二百味草花膏，以羊食百草、蜂采百花也。李时珍曰：肝开窍于目，胆汁减则目暗，目者肝之外候，胆之精华也，故诸胆皆治目病。</small>
 
- **羊胫骨入肾而补骨，烧灰擦牙良**。李时珍曰：羊胫骨灰可以磨镜，羊头骨可以消铁，误吞铜钱者胫骨三钱米饮下。
+ **羊胫骨入肾而补骨，烧灰擦牙良**。<small>李时珍曰：羊胫骨灰可以磨镜，羊头骨可以消铁，误吞铜钱者胫骨三钱米饮下。</small>
 
  **羊血解金、银、丹石、砒、硫一切诸毒。**
 
- **羊乳甘温。补肺肾虚，润胃脘、大肠之燥。治反胃消渴，口疮舌肿**, 含漱。**蜘蛛咬伤**。有浑身生丝者饮之。**肉、肝，青羖羊良；胆，青羯羊良；乳，白羜羊良。骨煅用。反半夏、菖蒲。忌铜器**。牡羊曰羖、曰羝，去势曰羯；子曰羔，羔五月曰羜。
+ **羊乳甘温。补肺肾虚，润胃脘、大肠之燥。治反胃消渴，口疮舌肿**, <small>含漱。</small>**蜘蛛咬伤**。<small>有浑身生丝者饮之。</small>**肉、肝，青羖羊良；胆，青羯羊良；乳，白羜羊良。骨煅用。反半夏、菖蒲。忌铜器**。<small>牡羊曰羖、曰羝，去势曰羯；子曰羔，羔五月曰羜。</small>
 
 【讲解】  **羊肉为补虚暖中之品。**为牛科动物山羊或绵羊的肉。
 
