--- a/ok/rm/rm03-0.5.0.0.0.md
+++ b/ok/rm/rm03-0.5.0.0.0.md
@@ -328,17 +328,33 @@
 | 金   | 收   | 毛（浮） |
 | 水   | 藏   | 石（沉） |
 
+## 3、天地之气与外感内伤
+
+人体有多种天地关系，从内外角度看，内在脏腑为阴像地，外在形体为阳像天，两者又有各自的天地之气。
+
+内在脏腑的天地之气中，地气主导天气。这是因为脏腑功能是将水谷地气存储转化为精气血供形体使用，所以以固液态的形质地气为根本。而脏腑之间腑为阳，天气偏多，脏为阴，地气偏多，所以以五脏五行为重；
+
+外在形体的天地之气中，天气主导地气。这是因为脏腑形成的精血在经络气态物质的推动下到达全身，以营养地气，所以营卫宗等六经气态物质组成的天气主导皮肉筋骨等地气，以天气为根本。而六经之中，阳经属阳，阴经属阴，所以以三阳经为重。
+
+通常来说，外感疾病容易先伤三阳经，若入里，先传阳腑，若不入里，也可传于阴经。因此时内在脏腑未伤，正气充足可抵抗外邪，所以以实证为多。饮食劳倦引起的内伤病，容易先伤五脏，五脏受损，产生精气血的能力下降，多成为虚证。但这只是通常的规律，不能教条化，全身各处都可以有寒热虚实的失衡情况。
+
+> 岐伯曰：阳者天气也，主外；阴者地气也，主内。故阳道实，阴道虚。故犯贼风虚邪者阳受之，食饮不节，起居不时者，阴受之。阳受之则入六腑，阴受之则入五脏。入六腑则身热不时卧，上为喘呼；入五脏则瞋满闭塞，下为飧泄，久为肠澼。
+>
+> 《素问-太阴阳明论》
+
+《伤寒论》论外感伤寒，所以以六经为纲，以三阳经开头。《金匮要略》论内伤杂病，以“见肝之病，知肝传脾，当先实脾”的五行生克制化理论开篇。
 
 
-## 3、总结
 
-人体的元气、天气、地气外应自然界的阳光、空气、大地。人体从能量分配角度分三阴三阳六大区域，相应人体的气态物质流转于相应区域的时候，就称为对应的六气。比如厥阴区域的气为风，少阴区域的气为热，太阴区域为湿，少阳区域为相火（对应暑），阳明区域为燥，太阳为寒。
+## 4、总结
+
+人体的元气、天气、地气外应自然界的阳光、空气、大地。人体从能量分配角度分三阴三阳六大区域，人体的气态物质流转于相应区域的时候，就称为对应的六气。比如厥阴区域的气为风，少阴区域的气为热，太阴区域为湿，少阳区域为相火（对应暑），阳明区域为燥，太阳为寒。
 
 > **厥阴之上，风气主之；少阴之上，热气主之；太阴之上，湿气主之；少阳之上，相火主之：阳明之上；燥气主之；太阳之上，寒气主之。所渭本也，是谓六元。**
 >
 > 《素问·天元正纪大论》
 
-天气与地气对应，风对木，热暑对火，湿对土，燥对金，寒对水，所以厥阴风木、少阳相火、少阴君火、阳明燥金、太阳寒水的名词来表示六大区域。
+天气与地气对应，风对木，热暑对火，湿对土，燥对金，寒对水，所以用厥阴风木、少阳相火、少阴君火、阳明燥金、太阳寒水的名词来表示六大区域。
 
 总的来说，在元气作用下，人体的固、液、气三类物质的形态相互转换；能量状态在时间维度上波动，在空间维度上各有差异，这种波动和差异又都在各自的平衡范围内，从而形成了人体的适宜内环境。这是根据“天人合一”的道理，通过观察大自然推导出的人体规律。
 
