--- a/ok/rm/rm02.md
+++ b/ok/rm/rm02.md
@@ -666,8 +666,6 @@
 
 基于这些资料，从频率的角度探讨中医内涵可能是一条让传统中医与现代科学结合的道路。
 
-
-
 #### 5.5 天不足西北，地不满东南
 
 内经起源于中国，处于北半球，所以谈到南热北寒东温西凉都是在中国这个地域角度上说的。
@@ -705,43 +703,33 @@
 >
 > 《黄帝内经-五常政大论》
 
-#### 5.6 标本中气的问题：
+#### 5.6 六气与三阳三阳的对应问题：
 
-天气地气随时间变化的过程是比较复杂的，内经中在《素问·六微旨大论》中对天道有如下论述：
+五运木火土金水和六气风热暑湿燥寒是天气、地气按照一年周期的能量波动来分配的，比较规律。但是三阴三阳和运气的对应关系却不规律，厥阴对风木，少阳对热（相火），少阴对暑（君火），太阴对湿土，阳明对燥金，太阳对寒水。这个问题是个非常大的难点，中医至今也没有特别公认的合理解释。
 
-> 岐伯稽首再拜对曰：明乎哉问！天之道也，此因天之序，盛衰之时也。
->
-> 帝曰：愿闻天道六六之节，盛衰何也？
->
-> 岐伯曰：上下有位，左右有纪。故少阳之右，阳明治之；阳明之右，太阳治之；太阳之右，厥阴治之；厥阴之右，少阴治之；少阴之右，太阴治之；太阴之右，少阳治之；此所谓**气之标**，盖南面而待也。故曰：因天之序，盛衰之时，移光定位，正立而待之，此之谓也。   
->
-> 少阳之上，火气治之，中见厥阴。
->
-> 阳明之上，燥气治之，中见太阴。   
->
-> 太阳之上，寒气治之，中见少阴。 
->
-> 厥阴之上，风气治之，中见少阳。 
->
-> 少阴之上，热气治之，中见太阳。
->
-> 太阴之上，湿气治之，中见阳明。 
->
-> 所谓本也。本之下，中之见也。见之下，气之标也。本标不同，气应异象……
->
-> 帝曰：善。愿闻地理之应六节，气位，何如？
->
-> 岐伯曰：显明之右，君火之位也。君火之右，退行一步，相火治之，复行一步，土气治之。复行一步，金气治之。复行一步，水气治之。复行一步，木气治之。复行一步，君火治之。
->
-> 相火之下，水气承之；水位之下，土气承之；土位之下，风气承之；风位之下，金气承之；金位之下，火气承之；君火之下，阴情承之。
->
-> 《素问·六微旨大论》
+内经明确说过三阴三阳是根据阴阳之气各有多少而划分的。以三阳中的太阳为例，其阳气应该是偏多的，为什么会对应冬季的寒水呢？
 
-这是中医中太阳寒水、少阴君火等说法的来源，应该是对天气运行规律的一个描述。以“太阳之上，寒气主之，中见少阴”为例，里面提到上、中等词，表明应有空间高低的因素，"太阳"应该属于某个三阴三阳系统，"寒气"应该属于天气六气系统，"中见少阴"的少阴应该属于另一个三阴三阳系统，这几个系统有关联。但是具体这几个系统是如何配合运作的，目前资料还不够，得不出合乎道理的通俗解释。前面说过，谈阴阳一定要明确功能、机制、平衡点等信息，否则对阴阳的探讨就会陷入无根据的揣测，所以此处存疑，等待有可信度的解释。
+前面阴阳章节说过，谈阴阳一定先说清功能、平衡点等要素。因为内经中并未说明三阴三阳所指的阴阳之气具体是什么，所以这个问题可以有多种理解。
 
-关于教材对此处的说法，参见《黄帝内经讲解-三阴三阳配六气及标本中气之间的关系》
+随便说一种可能性，如果我们把这里的阳理解为太阳发射到地球的热量，把阴理解为地球整体的阴气的话，两者之间的比例是随着太阳与地球的距离变化而变化。在年周期内，我们北半球的冬天的时候，日地距离其实是更近的，也就是地球整体获得的阳气是偏高的，北半球之所以是冬天是因为其分到的热量少，更多的热量分配到了南半球。
 
+天体的运动非常复杂。一个简单的起伏波动是很好理解的，但如果多个波动叠加在一起，理解难度迅速增加。内经说，天之道像浮云一样变幻莫测。
 
+> 黄帝问曰：呜呼，远哉！天之道也，如迎浮云，若视深渊尚可测，迎浮云莫知其极。夫子数言谨奉天道，余闻而藏之，心私异之，不知其所谓也？愿夫子溢志尽言其事，令终不灭，久而不绝，天之道，可得闻乎？
+>
+> 《素问-六微旨大论》
+
+前述三阴三阳按照一阴为厥阴，二阴为少阴，三阴为太阴，一阳为少阳、二阳为阳明、三阳为太阳。这个顺序是一定的，但是其是否叠加其它要素还不得而知。因此在三阴三阳与六气的对应上并不规律，目前只能作为一个结论来记住：厥阴风木、少阳相火、少阴君火、太阴湿土、阳明燥金、太阳寒水。
+
+教材对此只说三阴三阳是一个标识，来标示六气，并未过多解释。
+
+> 三阴三阳为标。这是因为三阴三阳本身只是作为一个标识或标志，分列以之代表六气。厥阴代表风，少阴代表热，太阴代表湿，少阳代表火，阳明代表燥，太阳代表寒。
+>
+> 《黄帝内经讲解-三阴三阳配六气及标本中气之间的关系》
+
+> **帝曰：其于三阴三阳，合之奈何？鬼臾区曰：子午之岁，上见少阴；丑未之岁，上见太阴；寅申之岁，上见少阳；卯酉之岁，上见阳明；辰戌之岁，上见太阳；已亥之岁，上见厥阴。少阴所谓标也，厥阴所谓终也（1）。厥阴之上，风气主之；少阴之上，热气主之；太阴之上，湿气主之；少阳之上，相火主之；阳明之上；燥气主之；太阳之上，寒气主之。所谓本也，是谓六元(2)。**
+>
+> 《素问•天元纪大论》
 
 ## 题目
 
