--- a/ok/rm/rm03-0.4.0.0.0.md
+++ b/ok/rm/rm03-0.4.0.0.0.md
@@ -68,7 +68,7 @@
 >
 > 《黄帝内经讲解-藏象- 三焦的部位和功用》
 
-《难经》指出，三焦是元气的别使。元气进入三焦，在上焦传输给心肺，中焦传输给脾胃，下焦传输给肾、大小肠、膀胱。如此，心肺才能各脏腑才能有足够的能量来完成各自工作。
+《难经》指出，三焦是元气的别使。元气进入三焦，在上焦传输给心肺，中焦传输给脾胃，下焦传输给肾、大小肠、膀胱。如此，各脏腑才能有足够的能量来完成各自工作。
 
 > **心肺**受上焦所宣布的元气，才能**宣发输布水谷精微**，
 >
