--- a/ok/bc/bc12-0.0.4.0.0.md
+++ b/ok/bc/bc12-0.0.4.0.0.md
@@ -1,6 +1,6 @@
 ### 姜 黄
 
-​      [原文]  **苦辛**，本草大寒，藏器《大明》日热。**色黄**，**入脾兼入肝经。理血中之气，下气破血,除风消肿，功力烈于郁金。治气胀血积，产后败血攻心，通月经，疗扑损。片子者，能入手臂，治风寒湿痹。**血虚臂痛者勿用。李时珍曰:人臂治痛，其兼理血中之气可知。**出川**、**广**。陈藏器曰:郁金苦寒色赤，姜黄辛温色黄,莪术味苦色青。三物不同，所用各别。《经疏》曰:姜黄主治，介乎三棱、郁金之间。李时珍曰:姜黄、郁金、莪术，形状功用大略相近，但郁金人心，专治血，姜黄入脾,兼治血中之气  莪术入肝，治气中之血，稍为不同，今时以扁如干姜者，为片子姜黄，圆入蝉腹者，为蝉肚郁金，并可染色。术形虽似郁金，而色不黄也。
+​      [原文]  **苦辛**，<small>本草大寒，藏器《大明》日热。</small>**色黄**，**入脾兼入肝经。理血中之气，下气破血,除风消肿，功力烈于郁金。治气胀血积，产后败血攻心，通月经，疗扑损。片子者，能入手臂，治风寒湿痹。**<small>血虚臂痛者勿用。李时珍曰:人臂治痛，其兼理血中之气可知。</small>**出川、广**。<small>陈藏器曰:郁金苦寒色赤，姜黄辛温色黄,莪术味苦色青。三物不同，所用各别。《经疏》曰:姜黄主治，介乎三棱、郁金之间。李时珍曰:姜黄、郁金、莪术，形状功用大略相近，但郁金人心，专治血，姜黄入脾,兼治血中之气  莪术入肝，治气中之血，稍为不同，今时以扁如干姜者，为片子姜黄，圆入蝉腹者，为蝉肚郁金，并可染色。术形虽似郁金，而色不黄也。</small>
 ​     
 
 **【讲解】  姜黄以活血祛瘀、行气止痛为主要功效**。为姜科多年生宿根草本植物姜黄的根茎。外表深黄色，质坚不易折断，断面亦为黄色，切片生用。
