--- a/ok/bc/bc12-0.0.3.0.0.md
+++ b/ok/bc/bc12-0.0.3.0.0.md
@@ -1,7 +1,7 @@
 ### 郁  金
 
-[原文] **辛苦气寒，纯阳之品。其性轻扬上行，入心及包络，兼入肺经。凉心热，散肝郁，下气破血**。行滞气， 亦不损正气；破瘀血，亦能生新血。**治吐衄尿血，妇人经脉逆行**，经不下行，上为吐衄诸证，用郁金末，加韭汁、姜汁、童便服，其血自清，痰中带血者，加竹沥。**血气诸痛,产后败血攻心（1)，颠狂失心（2)**，颠多喜笑,尚知畏惧，证属不足，狂多忿怒，人莫能制,证属有余。此病多因惊忧,瘀血塞于心窍所致。郁金七两，白矾三两，米糊丸服，名白金丸，郁金入心散恶血,明矾化顽痰故也。**痘毒入心**，郁金一两，甘草二钱半，煮干焙研末，冰片五分，每用一钱，加猪血五七滴，新汲水下，治斑痘始有白泡，忽搐入腹，紫黑无脓。**下蛊毒**。同升麻服，不吐则下。**出川、广，体锐圆如蝉肚，外黄内赤，色鲜微香，味苦带甘者真。**
-​    
+[原文] **辛苦气寒，纯阳之品。其性轻扬上行，入心及包络，兼入肺经。凉心热，散肝郁，下气破血**。<small>行滞气， 亦不损正气；破瘀血，亦能生新血。</small>**治吐衄尿血，妇人经脉逆行**，<small>经不下行，上为吐衄诸证，用郁金末，加韭汁、姜汁、童便服，其血自清，痰中带血者，加竹沥。</small>**血气诸痛,产后败血攻心（1)，颠狂失心（2)**，<small>颠多喜笑,尚知畏惧，证属不足，狂多忿怒，人莫能制,证属有余。此病多因惊忧,瘀血塞于心窍所致。郁金七两，白矾三两，米糊丸服，名白金丸，郁金入心散恶血,明矾化顽痰故也。</small>**痘毒入心**，<small>郁金一两，甘草二钱半，煮干焙研末，冰片五分，每用一钱，加猪血五七滴，新汲水下，治斑痘始有白泡，忽搐入腹，紫黑无脓。</small>**下蛊毒**。<small>同升麻服，不吐则下。</small>**出川、广，体锐圆如蝉肚，外黄内赤，色鲜微香，味苦带甘者真。**
+    
 
 【讲解】 (1)败血攻心:指分娩后由于恶露，瘀血不下，或下而不畅所产生的以神志错乱为主要特征的病证。(2)颠狂失心:癫狂并称，是指精神错乱的一类疾病。癫证古时又称失心风。
      
