--- a/ok/bc/bc12-0.0.6.0.0.md
+++ b/ok/bc/bc12-0.0.6.0.0.md
@@ -1,6 +1,6 @@
 ### 荆  三  棱
 
-【原文】 **苦平。色白属金**，皮黑肉白。**入肺金血分。破血中之气**，亦通肝经聚血。**兼入脾经。散一切血瘀气结，疮硬食停，老块坚积**。乃坚者削之，从血药则治血，从气药则治气，须辅以健脾补气药良。昔有人患癥瘕死，遗言开腹取之，得病块如石，文理五色，削成刀柄，因砍三棱，柄消成水，乃知此药，可疗癥瘕。**消肿止痛，通乳堕胎。功近香附而力峻，虚者慎用。色黄体重，若鲫鱼而小者。醋浸炒，或面裹煨**。
+【原文】 **苦平。色白属金**，<small>皮黑肉白。</small>**入肺金血分。破血中之气**，<small>亦通肝经聚血。</small>**兼入脾经。散一切血瘀气结，疮硬食停，老块坚积**。<small>乃坚者削之，从血药则治血，从气药则治气，须辅以健脾补气药良。昔有人患癥瘕死，遗言开腹取之，得病块如石，文理五色，削成刀柄，因砍三棱，柄消成水，乃知此药，可疗癥瘕。</small>**消肿止痛，通乳堕胎。功近香附而力峻，虚者慎用。色黄体重，若鲫鱼而小者。醋浸炒，或面裹煨**。
      
 
 【讲解】 **三棱既能破血祛瘀,又可行气止痛**。为黑三棱科多年生草本植物黑三棱的块茎。另有沙草科植物荆三棱的块茎也作药用。然在药材上植物黑三棱的块茎称荆三棱，而植物荆三棱的块茎则称黑三棱。虽植物名与药材名因误称而相反，但已沿用成习。切片晒干，生用或醋炒用。
