--- a/ok/bc/bc12-0.0.7.0.0.md
+++ b/ok/bc/bc12-0.0.7.0.0.md
@@ -1,6 +1,6 @@
 ### 丹 参
 
-【原文】 **气平而降**，《本经》 微寒。 弘景曰:  性应热。**味苦色赤。入心与包络**。**破宿血**，**生新血**，瘀去然后新生。**安生胎**，养血。**堕死胎**，去瘀。**调经脉**，  风寒湿热，袭伤营血，则经水不调。先期属热，后期属寒，又有血虚、血瘀、 气滞、痰阻之不同。大抵妇人之病,首重调经，经调则百病散。**除烦热**，**功兼四物**，一味丹参散，功同四物汤。**为女科要药**。**治冷热劳**，**骨节痛**，**风痹(1)不随**，  手足缓散，不随人用。经曰:足受血而能步，掌受血而能握。**肠鸣腹痛**，**崩带癥瘕**，音征加。癥者有块可征；瘕者假也，移动聚散无常。皆血病。**血虚血瘀之候**，**又治目赤疝痛**，**疮疥肿毒**，**排脓生肌。**郑奠一曰：丹参养神定志，通利血脉， 实有神验。**畏硷水**。**忌醋**。反藜芦。
+【原文】 **气平而降**，<small>《本经》 微寒。 弘景曰:  性应热。</small>**味苦色赤。入心与包络**。**破宿血**，**生新血**，<small>瘀去然后新生。</small>**安生胎**，<small>养血。</small>**堕死胎**，<small>去瘀。</small>**调经脉**，  <small>风寒湿热，袭伤营血，则经水不调。先期属热，后期属寒，又有血虚、血瘀、 气滞、痰阻之不同。大抵妇人之病,首重调经，经调则百病散。</small>**除烦热，功兼四物，**<small>一味丹参散，功同四物汤。</small>**为女科要药**。**治冷热劳，骨节痛，风痹(1)不随**， <small> 手足缓散，不随人用。经曰:足受血而能步，掌受血而能握。</small>**肠鸣腹痛，崩带癥瘕**，<small>音征加。癥者有块可征；瘕者假也，移动聚散无常。皆血病。</small>**血虚血瘀之候**，**又治目赤疝痛，疮疥肿毒，排脓生肌。**<small>郑奠一曰：丹参养神定志，通利血脉， 实有神验。</small>**畏硷水。忌醋。反藜芦。**
 
 【讲解】  (1)风痹：痹即闭阻不通之意。人体肌表、经络受风寒湿邪侵袭而引起的肢体关节痛重麻木等证称痹证。风痹为痹证中风邪较甚的一种。
 
@@ -22,5 +22,4 @@
     
 
 【用量用法】  5-15克，煎服。酒炒可增强活血之功。反藜芦。
-
 
