--- a/ok/rm/rm05.md
+++ b/ok/rm/rm05.md
@@ -186,7 +186,19 @@
 
 前面说脏病重于腑病，腑病重于筋脉皮肉病。但是如果把精与神考虑在内的话，精与神的层次还要高于脏。人在孩童时期，天真无邪，神思不乱，所以神足。加上肾精中的先天之精充足，精可补充一身的阴阳。孩童的形体虽未长成，但精、神充足，对身体阴阳失衡的调节能力很强，产生的气血数量超过形体基本需求，所以其生命力很强，活泼好动。
 
-老人则相反，精、神都衰弱，导致脏腑功能下降，产生的气血不足以供养形体，所以行动迟缓，齿枯发落。虽然可以靠药物对脏腑虚实进行一定的调节，但是因其自身精神的调节能力已经很差了，所以效果也是有限。由此可见，积精全神才是健康长寿的根本。
+老人则相反，精、神都衰弱，导致脏腑功能下降，产生的气血不足以供养形体，所以行动迟缓，齿枯发落。虽然可以靠药物对脏腑虚实进行一定的调节，但是因其自身精神的调节能力已经很差了，所以效果也是有限。
+
+也可以说，精是最好的药物，神是最好的医生。无论脏腑形体何处有虚实失衡，精、神皆可进行调节。精神充足，普通病邪难以深入，人一般无大病，有病也容易治疗。若精、神不足，一旦得病，小病易变大病、大病容易死亡，需要有高明的医生做精细的对证调节，才能治好。如果遇到鲁莽的大夫，胡乱攻补，小则伤身，重则送命。
+
+> 黄帝问曰：余闻古之治病，惟其移精变气...岐伯对曰：...此恬淡之世，邪不能深入也。...
+>
+> 当今之世不然，忧患缘其内，苦形伤其外...内至五脏骨髓，外伤空窍肌肤，所以小病必甚，大病必死。...
+>
+> 上古...理色脉而通神明，....所以远死而近生...。中古之治病...标本已得，邪气乃服。...暮世之病也...治不本四时，不知日月，不审逆从...粗工凶凶，以为可攻，故病未已，新病复起。
+>
+> 《素问-移精变气篇》
+
+由此可见，积精全神才是健康长寿的根本。
 
 > 养生方法虽然以保养精气神为核心，但是以节欲保精为第一要义。因为精气神是不分割的统一体，存则俱存，亡则俱亡。精能化气，气能生神，精、气、神存在着相互依存、相互转化的关系，而精是神气的本源，所以《内经》有“积精全神”之说。
 >
