--- a/ok/rm/rm02.md
+++ b/ok/rm/rm02.md
@@ -703,7 +703,7 @@
 >
 > 《黄帝内经-五常政大论》
 
-#### 5.6 六气与三阳三阳的对应问题：
+#### 5.6 六气与三阴三阳的对应问题：
 
 五运木火土金水和六气风热暑湿燥寒是天气、地气按照一年周期的能量波动来分配的，比较规律。但是三阴三阳和运气的对应关系却不规律，厥阴对风木，少阳对热（相火），少阴对暑（君火），太阴对湿土，阳明对燥金，太阳对寒水。这个问题是个非常大的难点，中医至今也没有特别公认的合理解释。
 
