--- a/ok/qs/qs03_.md
+++ b/ok/qs/qs03_.md
@@ -1,6 +1,6 @@
 # 三、方剂口诀&
 
-## 01解表剂
+## 01解表剂太阴署温须
 
 ### [**辛温解表**]
 
@@ -914,7 +914,7 @@
 
 **三物[香薷](https://www.gmzyjc.com/read/bc/bc01-1.1.12.0.0.md)豆朴先，祛暑解表功效坚，**
 
-**再加银翘豆易花，太阴署温须当辨。**
+**再加银翘豆易花，太阴暑温须当辨。**
 
 **太阴暑温** 暑温，指感受暑热而发生的一种急性热病。若其病变主要在肺，肺属手太阴，即称太阴暑温。
 
