--- a/ok/qs/qs03_07.md
+++ b/ok/qs/qs03_07.md
@@ -26,7 +26,7 @@
 
 **三物香薷豆朴先，祛暑解表功效坚，**
 
-**再加银翘豆易花，太阴署温须当辨。**
+**再加银翘豆易花，太阴暑温须当辨。**
 
 **太阴暑温** 暑温，指感受暑热而发生的一种急性热病。若其病变主要在肺，肺属手太阴，即称太阴暑温。
 
@@ -72,5 +72,5 @@
 
 麦冬甘斛连瓜翠，气阴耗伤此方能。
 
-本方由洋参、竹叶、知母、荷叶梗、麦冬、甘草、石斛、黄连、西瓜翠衣、粳米等十味药组成。功能清暑益气。主治署热耗伤气阴，汗多烦渴，脉大而虚者。
+本方由洋参、竹叶、知母、荷叶梗、麦冬、甘草、石斛、黄连、西瓜翠衣、粳米等十味药组成。功能清暑益气。主治暑热耗伤气阴，汗多烦渴，脉大而虚者。
 
