--- a/ok/rm/rm02.md
+++ b/ok/rm/rm02.md
@@ -360,13 +360,11 @@
 
 `关于天气，这里要注意天之六气和三阴三阳的关系。两者之间的关系很紧密，又不完全等同。`
 
-`三阴三阳是北半球一年之内的太阳阳气与地球阴气的比例波动变化,是地球和太阳之间系统的阴阳划分。`
+`三阴三阳是一年之内的太阳阳气与地球阴气的比例波动变化,是地球和太阳之间系统的阴阳划分。`
 
 `六气是一年内天气的波动变化,是天气、地气系统中，天气自身的阴阳划分。`
 
-`两者不在一个系统中，但是有一定的对应关系。三阴三阳中阳气旺的时间大致对应天气中热的时间，天气稍有延迟。`
-
-`依然可以用烧水煮菜的例子来帮助理解。`
+`两者不在一个系统中，但是有一定的对应关系。三阴三阳的变化导致了天气的变化。`
 
 ##### 气交之处的能量交互平衡
 
@@ -420,7 +418,7 @@
 
 现代对大气层的分层命名中，大气的底层是对流层。对流层的特性与中医的气交之处相似。比如云雨都发生在对流层，而云雨是中医天地相交的一个重要过程；对流层的温度受地面因素影响很大等等。
 
-中医的三阴三阳、五运、六气是通过“移光定位”，也就是影子长度来判断。而影子长度即是我们现代所说的太阳高度角，其大小与季节有关。这个角度影响了太阳辐射能量的多少。所以三阴三阳是太阳辐射能量的多少变化。
+中医的三阴三阳、五运、六气是通过“移光定位”，也就是影子长度来判断。而影子长度即是我们现代所说的太阳高度角，其大小与季节有关。这个角度影响了太阳辐射能量的多少。所以三阴三阳与太阳辐射能量的变化相关。
 
 现代地理课讲解的大气受热过程提到，阳光的能量只有一半能到达地面之前，另一半被大气吸收和反射了。对照前面的五运六气可以发现，大气吸收的的太阳能量为六气，大地吸收的太阳能量为五运。
 
