--- a/ok/rm/rm03-0.2.0.0.0.md
+++ b/ok/rm/rm03-0.2.0.0.0.md
@@ -90,7 +90,7 @@
 
 > **饮入于胃**，游溢精气，**上输于脾**（1），脾气散精，**上归于肺**，**通调水道**，**下输膀胱**。水精四布，五经并行（2）。合于四时五藏阴阳，揆度以为常也(3)。
 >
-> 肺朝百脉，水精布散，参与代谢，最终**回流到肺的为淸中之浊**。然后依靠肺气的肃降作用，**向下输送到膀胱**。再经肾中阳气的蒸化，清浊分离，**浊中之清者复归于肺**，然后输注全身。**浊中之浊者变为尿液**，排出体外。所以**水液的输布虽然是一个几乎所有脏腑都参与**的复杂过程，但与肺、脾、肾三脏的关系尤为密切。
+> 肺朝百脉，水精布散，参与代谢，最终**回流到肺的为清中之浊**。然后依靠肺气的肃降作用，**向下输送到膀胱**。再经肾中阳气的蒸化，清浊分离，**浊中之清者复归于肺**，然后输注全身。**浊中之浊者变为尿液**，排出体外。所以**水液的输布虽然是一个几乎所有脏腑都参与**的复杂过程，但与肺、脾、肾三脏的关系尤为密切。
 >
 > 《黄帝内经讲解-藏象学说-食物精微的输布》
 
