--- a/ok/bc/bc01-1.2.8.0.0.md
+++ b/ok/bc/bc01-1.2.8.0.0.md
@@ -12,7 +12,7 @@
 
 **葛根以升阳散邪为特点，有解表透疹，生津止泻作用。**为豆科多年生落叶藤本植物葛的根。生用，或煨用。
 
-本品辛甘性凉，具有轻淸升散之性。入脾、胃经，而以阳明胃经为主。阳明主肌肉，故能解肌退热，透发斑疹；又能鼓舞脾胃清阳之气上升，而奏生津止渴、止泻之效。常用于肌表有热之
+本品辛甘性凉，具有轻清升散之性。入脾、胃经，而以阳明胃经为主。阳明主肌肉，故能解肌退热，透发斑疹；又能鼓舞脾胃清阳之气上升，而奏生津止渴、止泻之效。常用于肌表有热之
 外感，或斑疹不透，热病口渴，酒毒烦热，消渴，以及泄泻等证。
 
 
