--- a/ok/yk/yk0zl07-0.1.4.0.0.md
+++ b/ok/yk/yk0zl07-0.1.4.0.0.md
@@ -2,7 +2,7 @@
 
 眼病的发生，可因时、因地、及因人的不同而出现不同的证候特点。因此，中医眼科在临证时，要求根据季节、地区、以及人的体质、年令等不同情况，制定相应的治疗方法。
 
-1.因时制宜：四时气候的变化，对眼病的发生和变化，均有不同的影响。例如，春季木旺、肝盛、风多，目赤痒涩等证多有发生，治疗应注意使用柴胡、荆芥、防风等疏风药；夏季炎热，心火偏盛，眼病之发常缘火盛，治疗上每可考虑黄连、竹叶等淸心泻火药的应用；长夏暑盛挟湿，眼病常兼湿热，治疗上常用霍香、佩兰、六一散等芳香化湿、清热利水的药物；秋令燥气偏盛，肺金易受戕伐，治疗上常用沙参、麦门冬、知母等清润肺金之品；冬季主蛰，阳气内藏，此时的眼病若非大热，当慎用寒凉之药。而且，冬季因气多风寒，辛温散寒之品如羌活、白芷、荆芥、防风，甚或麻黄、细辛亦属常用之例。
+1.因时制宜：四时气候的变化，对眼病的发生和变化，均有不同的影响。例如，春季木旺、肝盛、风多，目赤痒涩等证多有发生，治疗应注意使用柴胡、荆芥、防风等疏风药；夏季炎热，心火偏盛，眼病之发常缘火盛，治疗上每可考虑黄连、竹叶等清心泻火药的应用；长夏暑盛挟湿，眼病常兼湿热，治疗上常用霍香、佩兰、六一散等芳香化湿、清热利水的药物；秋令燥气偏盛，肺金易受戕伐，治疗上常用沙参、麦门冬、知母等清润肺金之品；冬季主蛰，阳气内藏，此时的眼病若非大热，当慎用寒凉之药。而且，冬季因气多风寒，辛温散寒之品如羌活、白芷、荆芥、防风，甚或麻黄、细辛亦属常用之例。
 
 2.因地制宜：我国地域辽阔，各地气候、地理环境、生活习惯和病理变化的特点不尽相同，某些地区还会出现一些特殊眼病。临证治疗应当考虑各地的不同情况。例如，我国的西方、北方，地高气寒风多，所患眼病常兼风寒外束，每多使用疏散风寒的四味大发散<sup>〔62〕</sup>，而且药量较重，而我国东、南地区，地洼气温多湿，所患眼病常兼湿热火盛，用药常多辛凉宣泻之品，而且用量较轻。又如蜀地居民，习食辛辣，对辛热药物的耐受能力较强，所以当患虚寒眼病而需要附子等药时，用量不妨稍重于其他地区。至于地方眼病，如高原雪地每有雪盲证，放牧地区多有蜡目证，则应根据具体情况，采用相应的防治措施。
 
