--- a/ok/bc/bc01-1.1.1.0.0.md
+++ b/ok/bc/bc01-1.1.1.0.0.md
@@ -12,11 +12,11 @@
 
 此外，麻黄既能上开肺气而发汗，又可通调水道下输膀胱而利水，治水肿而兼有表证者甚为适合。
 
-至 《备要》言能治"赤黑斑毒，毒风疹痹，皮肉不仁，目赤肿痛”等证。按《本草求真》所谓“审其腠理坚闭，病虛用散，亦当审实以投”。而以麻黄的温散风寒作用，配合相应的药物，也可用治风湿痹痛，风疹瘙痒，以及阴疽、痰核等证。
+至 《备要》言能治"赤黑斑毒，毒风疹痹，皮肉不仁，目赤肿痛”等证。按《本草求真》所谓“审其腠理坚闭，病虚用散，亦当审实以投”。而以麻黄的温散风寒作用，配合相应的药物，也可用治风湿痹痛，风疹瘙痒，以及阴疽、痰核等证。
 
 本品发汗之力较强，表虚自汗及肺虚喘咳者忌用。
 
-《备要》 言"夏月禁用”。而《本草正》言“有谓夏月不宣宜用麻黄者，皆不达。虽在李氏有云，若过发汗则汗多亡阳，若自汗表虛之人，用之则脱人元气，是皆过用、误用而然。若阴邪深入，则无论冬夏，皆所最宜，又何过之有”。
+《备要》 言"夏月禁用”。而《本草正》言“有谓夏月不宣宜用麻黄者，皆不达。虽在李氏有云，若过发汗则汗多亡阳，若自汗表虚之人，用之则脱人元气，是皆过用、误用而然。若阴邪深入，则无论冬夏，皆所最宜，又何过之有”。
 
 【临证应用】麻黄善于宣肺气，开腠理，透毛窍，散风寒。治外感风寒、恶寒发热、头痛身疼、鼻塞无汗者，常与桂枝相须为用，以增强发汗力量，如麻黄汤；治风寒外束，肺气不宣的咳嗽气喘，多与杏仁相配，可增强平喘功效，如三拗汤。若内兼寒饮，则配桂枝，干姜、细辛、半夏等药，以增温肺，作饮之功，如小青龙汤；若热邪壅肺的喘咳，又可与石膏、杏仁等配伍，以清肺平喘,如麻杏石甘汤。用于水肿而兼有表证者，本品发汗利水，有助于水肿消退，与白术、生姜等配伍，如越婢加术汤。
 
