--- a/ok/bc/bc01-1.1.11.0.0.md
+++ b/ok/bc/bc01-1.1.11.0.0.md
@@ -7,7 +7,7 @@
 本品味苦辛，性温，有小毒。人肺经。苦可燥，辛能敬，温能通，故有通鼻窍，祛风湿，止痛之功。长于疏散宣通，能上达
 巅顶，下走足膝，内通筋骨，外达皮肤，可祛一切风湿之邪。凡风湿郁遏于上的头痛鼻渊，侵于筋骨的风湿痹痛，淫于皮肤的疮疹瘙痒等，均可应用。瘰疬一般不用。
 
-【临证应用】苍耳子治鼻渊头痛，常配辛夷、白芷等，如苍耳散。治外感风寒头痛及头风痛，可配防风、白芷、藁本。头痛属于血虛者，则不宜用。治风湿痹痛，四肢拘挛等证，可配威灵仙、苍术、桂枝、川芎等祛风湿、活血药。
+【临证应用】苍耳子治鼻渊头痛，常配辛夷、白芷等，如苍耳散。治外感风寒头痛及头风痛，可配防风、白芷、藁本。头痛属于血虚者，则不宜用。治风湿痹痛，四肢拘挛等证，可配威灵仙、苍术、桂枝、川芎等祛风湿、活血药。
 
 苍耳全草有毒，尤以果实、芽为最，且鲜者较干者毒大。如不慎中毒,可产生头晕头痛，恶心呕吐，腹痛腹泻，黄疸等证，乃至昏迷惊厥，导致死亡。故不宜过量或久服。中毒处理，现代医学用髙锰酸钾洗胃，或服泻药，2 %盐永灌肠。补液给维生素C、K等，并及时处理循环及肾功能衰竭。轻者可服甘草绿豆汤或板蓝根水煎液以解毒。
 
