--- a/ok/bc/bc01-1.1.12.0.0.md
+++ b/ok/bc/bc01-1.1.12.0.0.md
@@ -12,7 +12,7 @@
 
 本品主要用作夏令"阴暑”的解表药。若夏伤暑热引起的壮热、烦渴、大汗等“阳暑"病证，非其适用范围，则应忌用。因此，不能视本药为通治一切暑证之品。正如《本草正义》所说：香薷为治暑要药者，亦指夏月受凉，外寒闭其内热,有发热、恶寒、头痛等证，则香薷通阳解表，是其专职，而又能导水利湿，更与夏日湿热郁蒸、膀胱不利者相合，非谓夏天百病，香薷一物能通治之也。
 
-【临证应用】本品用治夏暑季节外伤于寒，内伤于湿所致的形寒身热，头重头痛，胸闷无汗，吐泻腹痛等证。常与厚朴、扁豆同用，如香薷饮，发汗化湿，以祛暑湿之邪;如暑湿兼有热象者，则加黄连使用；用于水肿，小便不利者，与白术相配，如薷术丸，以健脾利水，对脾虛水肿患者疗效尤佳。又因气味清香，水煎含漱，可治口臭。
+【临证应用】本品用治夏暑季节外伤于寒，内伤于湿所致的形寒身热，头重头痛，胸闷无汗，吐泻腹痛等证。常与厚朴、扁豆同用，如香薷饮，发汗化湿，以祛暑湿之邪;如暑湿兼有热象者，则加黄连使用；用于水肿，小便不利者，与白术相配，如薷术丸，以健脾利水，对脾虚水肿患者疗效尤佳。又因气味清香，水煎含漱，可治口臭。
 
 
-【用量用法】 3 — 6克，煎服。利水退肿须浓煎。发汗力强，表虛有汗者忌用。
+【用量用法】 3 — 6克，煎服。利水退肿须浓煎。发汗力强，表虚有汗者忌用。
