--- a/ok/bc/bc01-1.1.2.0.0.md
+++ b/ok/bc/bc01-1.1.2.0.0.md
@@ -20,20 +20,20 @@
 本品味辛甘，性温。入肺、心、膀胱经。肺主皮毛属卫，心主血脉属营，膀胱经外主肌表，膀胱府内司小便。辛散温通，能振奋气血，透达营卫，可外行于表，以发汗解肌；横走四肢，通经脉而利关节，借其温通之性，以达活血通经，散寒止痛之效。
 为外感风寒，风寒湿痹，以及痛经、经闭等证常用要药。因其发汗作用较为和缓，故凡风寒表证，不论无汗或有汗皆可用之，尤对体虚感冒，上肢肩臂疼痛等更为适宜。桂枝之所以能用之于汗出、恶风的表虚证，主要是配伍酸敛之芍药，取其一散一收，以达调和营卫，散风敛营之功，既使表邪外解，又无大汗之弊。所
 谓桂枝“无汗能发，有汗能止”之说，就是通过不同配伍所产生的效
-果。正如《本草求真》所说：“其汗之能发，只是因其卫实营虛，阴被阳凑，故用桂枝以调其营，营调则卫气自和，而风邪莫容，
+果。正如《本草求真》所说：“其汗之能发，只是因其卫实营虚，阴被阳凑，故用桂枝以调其营，营调则卫气自和，而风邪莫容，
 遂自汗而解，非若麻黄能开腠理以发其汗也。其汗之能收，只因
-卫受风伤，不能内护于营，营气虛弱，津液不固，故有汗发热而恶风，其用桂枝汤为治，取其内有芍药入营以收阴，外有桂枝入卫以除邪，则汗自克见止，非云桂枝能闭其汗孔也。”
+卫受风伤，不能内护于营，营气虚弱，津液不固，故有汗发热而恶风，其用桂枝汤为治，取其内有芍药入营以收阴，外有桂枝入卫以除邪，则汗自克见止，非云桂枝能闭其汗孔也。”
 
 桂枝之用于痰饮、水肿者，是取其温通作用，因为水湿阴邪，
 得阳则化，用本品通阳化气之功，以增化湿利水之效。用于阳气
 不行，水湿内停而致的痰饮、水肿之证，颇为有效。桂枝之通心阳，散胸中寒邪之功亦较为突出，故又常用于胸痹、胸闷、胸痛及心悸、脉结代之证。由上所见，桂枝的效用极为广泛，正如《本经疏证》所归纳的其用之道有六：曰和营，曰通阳，曰利水，曰下气，曰行瘀，曰补中。
 
 【临证应用】桂枝功能发汗解肌，常用于外感风寒表证。
-治发热、恶风、汗出而表证仍不解的表虛证，主与白芍配伍，以
+治发热、恶风、汗出而表证仍不解的表虚证，主与白芍配伍，以
 调和营卫，如桂枝汤；若发热、恶寒、头痛、无汗表实证，则与麻黄相配，以其和营通阳之功，益增麻黄发汗解表之能，如麻黄汤。
 
 桂枝善能温经通脉、散寒止痛，用于风寒湿痹，肩臂肢节酸痛，
-常与附子同用，以温经散寒，通痹止痛，如桂枝附子汤；若营卫虛弱，血痹麻木者，可与黄芪、芍药等药配伍，以养营固卫，温经通络而止痛，如黄芪桂枝五物汤。治妇女经寒瘀滞，经闭、痛经，以及癥瘕等症，前者常与当归、川芎、吴萸等药同用，以温经活血，如温经汤；后者可与桃仁、丹皮等药配伍，以逐瘀消癥，如桂枝茯苓丸。
+常与附子同用，以温经散寒，通痹止痛，如桂枝附子汤；若营卫虚弱，血痹麻木者，可与黄芪、芍药等药配伍，以养营固卫，温经通络而止痛，如黄芪桂枝五物汤。治妇女经寒瘀滞，经闭、痛经，以及癥瘕等症，前者常与当归、川芎、吴萸等药同用，以温经活血，如温经汤；后者可与桃仁、丹皮等药配伍，以逐瘀消癥，如桂枝茯苓丸。
 桂枝其有通阳化气之功，常用于脾阳不运、水湿内停的痰饮，
 每与茯苓、白术、甘草配伍，以健脾利湿、温化痰饮，如苓桂术甘汤；若脾阳不运，气化失司，膀胱蓄水，小便不利，水肿等证，常与茯苓、泽泻等药同用，以通阳化气，利水渗湿，如五苓散。
 此外，桂枝还常用于胸痹、胸闷、气短、胸背痛，以及心悸、
