--- a/ok/bc/bc01-1.1.5.0.0.md
+++ b/ok/bc/bc01-1.1.5.0.0.md
@@ -23,4 +23,4 @@
 此外.，防风亦可用于肝脾不和的腹痛、泄泻，《丹溪心法》
 痛泻要方，即以此配白芍、白术、陈皮等，止痛止泻。
 
-【用量用法】3—10克。入煎剂、酒剂或丸散。主要用于外感风邪。若其他原因所致的泄泻、血虚发痉，及阴虛火旺者均应慎用。
+【用量用法】3—10克。入煎剂、酒剂或丸散。主要用于外感风邪。若其他原因所致的泄泻、血虚发痉，及阴虚火旺者均应慎用。
