--- a/ok/bc/bc01-1.1.9.0.0.md
+++ b/ok/bc/bc01-1.1.9.0.0.md
@@ -25,4 +25,4 @@
 
 【用量用法】	2 — 5克，煎服。外用适量，细辛辛散力
 强，用量不宜过大。《本草别论》云：若单用末，不可过一钱，
-多则气闷塞不通者死。故有“细辛不过钱”之说。虽非绝对，但近年有因过用而发生中毒的病例报道，故初学者应予注意。另外本品辛温走窜，易耗气伤阴，故凡气虛多汗、阴虚火旺、血虛内热，以及干咳无痰之证，均须忌用。反藜芦。蜜炙后用可减其温散之性。
+多则气闷塞不通者死。故有“细辛不过钱”之说。虽非绝对，但近年有因过用而发生中毒的病例报道，故初学者应予注意。另外本品辛温走窜，易耗气伤阴，故凡气虚多汗、阴虚火旺、血虚内热，以及干咳无痰之证，均须忌用。反藜芦。蜜炙后用可减其温散之性。
