--- a/ok/bc/bc01-1.2.10.0.0.md
+++ b/ok/bc/bc01-1.2.10.0.0.md
@@ -10,7 +10,7 @@
 汤，乃阳明圣药，如无犀角，代以升麻。二药性味相远，何以为代？盖升麻能引诸药同入阳明也。朱二允曰：升麻性升，犀角性降。用犀角止血，乃借其下降之气，清心肝之火，使血下行归经耳。倘误用升麻，血随气升，不愈涌出不止乎?古方未可尽泥也</small>。里白外黑，紧实者良，名鬼脸升麻。去须、芦用。<small>或有参，芪补剂，须用升、柴，而又恐其太升发者，升麻、柴胡并用，蜜水炒之。别有一种绿升麻，缪仲醇用治带下，毎每有验。</small>
 
 【讲解】（1）至阴：至，到达。阴指太阴，太阴为三阴之始，故称脾为至阴。（2）疠:指有强烈传染性的致病邪气。（3）
-肺痿：病名。指肺叶枯萎，而以咳吐唾沫为主证的慢性虛弱性疾患。（4）蛊毒：病名。指人体感染后发生的蛊胀病。
+肺痿：病名。指肺叶枯萎，而以咳吐唾沫为主证的慢性虚弱性疾患。（4）蛊毒：病名。指人体感染后发生的蛊胀病。
 
 **升麻为升散之品，能升举清阳，发表透疹，兼有清热解毒之功。**为毛茛科多年生草本植物大三叶升麻或兴安升麻和升麻的根茎。干蝎根呈扭曲不整齐的圆柱形，表面黑色，粗造，有多数圆形空洞，洞内壁呈网状花纹，黑白相兼者称“花升麻”，或“鬼脸升麻”，质地较佳。生用或炙用。
 
