--- a/ok/bc/bc01-1.2.2.0.0.md
+++ b/ok/bc/bc01-1.2.2.0.0.md
@@ -19,5 +19,5 @@
 荨麻疹等，本品既散又泄，可促使疹子透发，常与薄荷、荆芥、
 蝉蜕等同用； 若热毒壅盛，则多与大青叶、紫草、银花等同用。与板蓝根、连翘、玄参等清热解毒药配伍，治各种热毒疮肿，以及大头瘟、痄腮等有良效。
 
-【用量用法】 5-15克，煎服。本品性寒滑利，故气虛便溏者慎用。
+【用量用法】 5-15克，煎服。本品性寒滑利，故气虚便溏者慎用。
 
