--- a/ok/bc/bc01-1.3.0.0.0.md
+++ b/ok/bc/bc01-1.3.0.0.0.md
@@ -5,7 +5,7 @@
 一、辛温解表药：均系辛温之品，都有发汗解表的作用，适用于风寒表证。但又各有特性，主治证候亦有区别。
 
 麻黄、桂枝、细辛发散风寒之力较强。麻黄、桂枝均主散太阳经肌表之风寒，然麻黄发汗作用大于桂枝，故用于无汗之表实证;桂枝不论有汗无汗皆可应用。麻黄又能开宣肺气，利水退肿，
-常用于肺气不宣的咳喘及水肿兼表证者；桂枝还可温通血脉，通阳化气，善治妇人血寒经闭，风湿痹证及阳虛不能化气的痰饮蓄水等证。细辛善散少阴经寒邪，多用于外感风寒，发热脉沉者，
+常用于肺气不宣的咳喘及水肿兼表证者；桂枝还可温通血脉，通阳化气，善治妇人血寒经闭，风湿痹证及阳虚不能化气的痰饮蓄水等证。细辛善散少阴经寒邪，多用于外感风寒，发热脉沉者，
 且有祛风湿，止痛及温肺化饮之功，可用于头痛齿痛，风湿痹痛及肺寒痰饮喘咳。惟药性较为峻烈，用时宜慎，用量不可过大。
 
 紫苏、荊芥、防风三药发汗作用不及麻、桂之峻，较为缓和，为一般风寒感冒常用之品。其中紫苏散寒力较强，并有行气安胎之功，风寒感冒兼有胸腹胀满，恶心呕逆者更为适宜；荆芥辛散疏风，无论风寒、风热皆可应用，兼能透疹止血，疹出不透及各种出血皆可选用；防风祛风为主，本品甘缓不峻，为风药中之润
@@ -23,7 +23,7 @@
 薄荷、牛蒡子、蝉蜕有发散风热，宣肺透疹的功效，为风热感冒，温病初期及疹发不透的常用药。三药中薄荷发散力较强，
 牛蒡子、蝉蜕次之。薄荷善散头面风热，兼理气解郁，可治头痛目赤及肝郁不舒之证；牛蒡子又能清热解毒，疮疡肿毒、咽喉疼痛常用;蝉蜕甘寒质轻，长于定惊止痉，明目退翳，多用于小儿惊风，破伤风及眼科疾患。
 
-桑叶、菊花发散之力不及薄荷，但能清肝火。二者都可散头面风热，治外感风热，头痛目赤，并常相须为用。但桑叶兼能润肺止咳，肺燥咳嗽用之较好；菊花清肝明目作用较桑叶为胜，并能养肝，肝火或阴虛阳亢的头痛眩晕，目赤等证，用之为宜；野
+桑叶、菊花发散之力不及薄荷，但能清肝火。二者都可散头面风热，治外感风热，头痛目赤，并常相须为用。但桑叶兼能润肺止咳，肺燥咳嗽用之较好；菊花清肝明目作用较桑叶为胜，并能养肝，肝火或阴虚阳亢的头痛眩晕，目赤等证，用之为宜；野
 菊花尤善清热解毒，是治疔疮肿毒的良药。
 
 柴胡、葛根、升麻都有升阳发散作用，其退热之功惟柴胡为首，主散少阳半表半里之邪，以治寒热往来之证。又能疏解肝郁，
