--- a/ok/bc/bc02-0.2.3.0.0.md
+++ b/ok/bc/bc02-0.2.3.0.0.md
@@ -6,6 +6,6 @@
 
 本品味甘性温，质润。入肺、大肠经。具有润肺滑肠之功。与柏子仁有相同功效，而滋润过之。然柏子仁能养心安神，此则以润滑为主，故多用于燥咳咯血，肠燥便秘，以及头目眩晕等证。
 
-【临证应用】治肺燥咳嗽，常与胡桃仁同用。若配大麻仁、柏子仁等，可治老人虛秘。
+【临证应用】治肺燥咳嗽，常与胡桃仁同用。若配大麻仁、柏子仁等，可治老人虚秘。
 
 【用量用法】5-10克，煎服，或入膏、丸用。
