--- a/ok/bc/bc02-0.2.4.0.0.md
+++ b/ok/bc/bc02-0.2.4.0.0.md
@@ -6,7 +6,7 @@
 
 【讲解】**蜂蜜善能润肺滑肠，并可缓急止痛。**为蜂蜜科昆虫中华蜜蜂或意大利蜂在蜂巢内酿成的蜜糖。又名白蜜。原蜜加水稀释、煮沸，滤去杂质，再浓缩后药用。
 
-本品味甘质润，生则性凉，熟则偏温。入肺、脾、大肠经。功能滑肠通便，润燥止咳。甘则补中缓急止痛，并能解毒。常用于肠燥便秘，肺燥干咳，胃脘疼痛，以及疮疡烫伤等证。本品虽有补益之功，但属润滑之品，多食能助湿，令人中满，且可滑肠，故有湿热痰滞，胸闷不舒及脾虛便溏者均不宜用。
+本品味甘质润，生则性凉，熟则偏温。入肺、脾、大肠经。功能滑肠通便，润燥止咳。甘则补中缓急止痛，并能解毒。常用于肠燥便秘，肺燥干咳，胃脘疼痛，以及疮疡烫伤等证。本品虽有补益之功，但属润滑之品，多食能助湿，令人中满，且可滑肠，故有湿热痰滞，胸闷不舒及脾虚便溏者均不宜用。
 
 【临证应用】蜂蜜用于肠燥便秘，除润肠外且能补益，故尤适用于体虚津亏之便秘，可单用30克，每天清晨空腹冲服。或微火炼浓，制成栓剂，纳入肛门内，如仲景蜜煎导法。用于肺虚久咳不止，或肺燥干咳、咽干等。可单用，每次一汤匙，每日两次，开本冲服。因其有润肺止咳作用，故止咳药常用蜜炙，以加强疗效。治脘腹疼痛，常与甘草同用。与乌头配伍，如大乌头煎，以止寒疝腹痛，手足厥冷之证，既能缓急止痛，又能解乌头毒。
 
