--- a/ok/bc/bc03-0.1.1.0.0.md
+++ b/ok/bc/bc03-0.1.1.0.0.md
@@ -7,7 +7,7 @@
 石膏功专清解，内清肺胃之火，外解肌肤之热。为单斜晶系含谁硫酸钙矿石。除去杂质碾碎，研細。生用或煅用。
 
 本品辛甘大寒。人肺、胃二经。味辛能散，大寒清热，外能解肌肤之热，内能清肺胃之火,于清热泻火中而具热退津生之意，除烦止渴之能，故为清解肺胃气分实热之要药。凡温病邪在气分，壮热烦渴，脉洪大等实热亢盛之证。及邪热深入，波及营血，壮热不退而发斑疹之气血两燔，或肺热喘咳，或胃火上炎的头痛、牙痛和齿龈肿痛等证，皆为主药，正如《本草经疏 》所载：甄权用以治伤寒头痛如裂，壮热如火；东垣用以治胃热肺热，散阳邪，
-缓脾益气者，邪热去则脾得缓而无气，回也；洁古又谓止阳明经头痛，发热恶寒,曰哺潮热，大渴引饮，中暑及牙痛者，无非邪在阳明经所生病也，理阳明而蔑不济矣。足阳明主肌肉，手太阴主皮毛，故又为发斑、发疹之要品。然系大寒之品，非实热证者不宜用，脾胃虚寒及阴虛内热者忌服。
+缓脾益气者，邪热去则脾得缓而无气，回也；洁古又谓止阳明经头痛，发热恶寒,曰哺潮热，大渴引饮，中暑及牙痛者，无非邪在阳明经所生病也，理阳明而蔑不济矣。足阳明主肌肉，手太阴主皮毛，故又为发斑、发疹之要品。然系大寒之品，非实热证者不宜用，脾胃虚寒及阴虚内热者忌服。
 
 【临证应用】   石膏具有较强的清热泻火作用。凡急性热病，邪在气分，壮热烦躁、口渴引饮，汗出、脉洪大，甚至神昏谵语者，常与知母相须为用，以加强疗效，如白虎汤。若热毒雍盛，发斑发疹，色紫暗者，可于白虎汤中加入凉血解毒药犀角、玄参同用，共奏清热化斑之功，如化斑汤。用于肺热实喘、咳嗽痰稠，心烦口渴者，常与麻黄、杏仁配伍，以清宣肺热、止咳平喘，如麻杏石甘汤。治胃热头痛、牙痛、齿龈肿痛，可与生地、知母、牛膝等配伍，如玉女煎。治胃中实火上炎，牙缝出血，可与黄连、升麻、丹皮等配伍，如清胃汤。近年常与银花、大青叶、连翘等清热解毒药同用，以治现代医学的流行性乙型脑炎、流行性脑脊髓膜炎、流行性感冒、肺炎等病，每获良效。
 
