--- a/ok/bc/bc03-0.1.2.0.0.md
+++ b/ok/bc/bc03-0.1.2.0.0.md
@@ -8,11 +8,11 @@
 
 **知母以清润为特点，既能清火，又善滋阴**。为百合科多年生草本植物知母的根茎。药材有两种，剥去栓皮者，称光知母，品质较佳；带皮的干燥拫茎，名毛知母，品质次之。临床多用前者。切片，生用或盐水炒用。
 
-本品苦甘寒，质柔润。入肺、胃、肾三经。苦寒能清、热、泻火，甘寒质润能滋阴润燥，故以清润为专长。上清肺，中凉胃，下泻相火，而滋肺胃肾之阴。凡燥热伤阴，不论实证虚证，均可应用。用治温热病，壮热烦渴，肺胃燥热证及阴虛火旺之潮热骨蒸、消渴等。然苦寒猜润，有伤胃作泻之虑。阴虚便秘者，甚为适合。若脾虚便溏或寒饮咳嗽者，则非所宜。   
+本品苦甘寒，质柔润。入肺、胃、肾三经。苦寒能清、热、泻火，甘寒质润能滋阴润燥，故以清润为专长。上清肺，中凉胃，下泻相火，而滋肺胃肾之阴。凡燥热伤阴，不论实证虚证，均可应用。用治温热病，壮热烦渴，肺胃燥热证及阴虚火旺之潮热骨蒸、消渴等。然苦寒猜润，有伤胃作泻之虑。阴虚便秘者，甚为适合。若脾虚便溏或寒饮咳嗽者，则非所宜。   
 
 有用酒炒，取其入上焦清金泻火;盐水喷炒，咸而入肾，引药下行，清泻相火。
 
-【临证应用】   知母用于温热病，壮热烦渴、脉洪大等肺胃实热证，与石膏配伍有协同之效，如白虎汤。对于肺肾阴亏、阴虚火旺所致之证，常与黄柏相须为用，如知柏地黄丸。治肺热咳嗽或阴虛燥咳，常与贝母同用，以清肺化痰止咳，如二母丸。还常配天花粉、麦冬等用于消渴，如玉液汤。
+【临证应用】   知母用于温热病，壮热烦渴、脉洪大等肺胃实热证，与石膏配伍有协同之效，如白虎汤。对于肺肾阴亏、阴虚火旺所致之证，常与黄柏相须为用，如知柏地黄丸。治肺热咳嗽或阴虚燥咳，常与贝母同用，以清肺化痰止咳，如二母丸。还常配天花粉、麦冬等用于消渴，如玉液汤。
 
 知母与石膏，均能清肺胃实热。然石膏辛甘大寒，重在清解；知母苦寒滋润，重在清润。故清宣肺热多用石膏，清热润燥多用知母。里热重，津已伤者宜用知母；里热重，津未伤者宜用石膏。气分热盛伤津之证，二药常相须为用。
 
