--- a/ok/bc/bc03-0.5.2.0.0.md
+++ b/ok/bc/bc03-0.5.2.0.0.md
@@ -6,7 +6,7 @@
 
  **白薇善清血热，退虚热**。为萝藦科多年生草本植物白薇和蔓生白薇的根及根茎。切段生用。
 
-本品苦咸性寒。主入肝、胃二经。苦主泄降，咸入血分，寒能清热。既清血分之热，又退阴虚发热。退虚热之中，略有透解之性故凡一切热病，邪入营血，身热经久不退；或热病后期，余热未尽，阴伤发热；或产后虚热，以及一切原因不明之虚性发热，皆为恒用之品，有较显著的退热作用，但血分无热或脾胃虛寒者不宜服用。
+本品苦咸性寒。主入肝、胃二经。苦主泄降，咸入血分，寒能清热。既清血分之热，又退阴虚发热。退虚热之中，略有透解之性故凡一切热病，邪入营血，身热经久不退；或热病后期，余热未尽，阴伤发热；或产后虚热，以及一切原因不明之虚性发热，皆为恒用之品，有较显著的退热作用，但血分无热或脾胃虚寒者不宜服用。
 
 【临证应用】     白薇用于热入营血，身热经久不退或骨蒸潮热及产后虚热等证，常与生地、青蒿、地骨皮、丹皮等相配；与人参、当归等配伍，以增补气益血退热之功，用治产后气虚血亏之发热，如白薇汤。本品还可用于肺热咳嗽，多与贝母、桑皮、枇杷叶等配伍，共奏清热化痰之效。此外，本品还兼有利尿通淋作用，如《千金方》治胎前产后的热淋血淋，配白芍等分为末冲服，或与生地、木通、滑石、淡竹叶等配伍。
 
