--- a/ok/bc/bc03-0.6.0.0.0.md
+++ b/ok/bc/bc03-0.6.0.0.0.md
@@ -42,7 +42,7 @@
 
 此外，橄榄、梨、甘蔗等也有清热解毒之功，橄榄尤善利咽喉化痰止咳，梨和甘蔗皆为润燥生津之佳品。枳椇子功专解酒，治酒醉烦热，口渴呕吐等症。茶叶清头目、除烦渴、化痰消食，并善利尿解毒。芭蕉根主能解毒疗疮，兼能生津止渴。
 
-五、清虛热药：本类药性多寒凉，具有养阴退热的功效，适用于骨蒸潮热，低热不退等证。其中青蒿长于清透阴分伏热，且能解暑治疟；银柴胡专退虚热而无升散之弊；白薇善治久热不退及产后血虚发热；地骨皮治有汗之骨蒸，且能降肺火，并为肺热咳喘，烦热消渴的常用药；胡黄连能消疳退蒸，为治小儿疳疾、劳热骨蒸之品。银柴胡退虛热，除骨蒸，为治骨蒸劳热之专用药，已附于柴胡下。
+五、清虚热药：本类药性多寒凉，具有养阴退热的功效，适用于骨蒸潮热，低热不退等证。其中青蒿长于清透阴分伏热，且能解暑治疟；银柴胡专退虚热而无升散之弊；白薇善治久热不退及产后血虚发热；地骨皮治有汗之骨蒸，且能降肺火，并为肺热咳喘，烦热消渴的常用药；胡黄连能消疳退蒸，为治小儿疳疾、劳热骨蒸之品。银柴胡退虚热，除骨蒸，为治骨蒸劳热之专用药，已附于柴胡下。
 ​      
 
 复习思考题
