--- a/ok/yk/yk0zl05-0.2.0.0.0.md
+++ b/ok/yk/yk0zl05-0.2.0.0.0.md
@@ -16,7 +16,7 @@
 
 肝藏血又主疏泄，性喜条达，其经脉上连目系。又“肝开窍于目”，“肝受血而能视”，“肝气通于目，肝和则目能辨五色”。风轮黑睛属肝，肝与胆互为表里，胆的精汁升聚而成的神膏，涵养瞳神。故肝胆功能失调，易引起眼病，尤以黑睛病变为常见。
 
-肝经病变有虚证、实证，亦有虛实相兼证，其临床症状各不相同。
+肝经病变有虚证、实证，亦有虚实相兼证，其临床症状各不相同。
 
 1.肝阴亏虚：肝为风木之脏，肝藏血，体阴而用阳，故肝阴易虚。肝阴不足，则营血亏损，不能上荣于目，则可出现两目昏花，干涩不舒以及肝虚雀目等证。
 
