--- a/ok/bc/bc01-1.1.13.0.0.md
+++ b/ok/bc/bc01-1.1.13.0.0.md
@@ -5,7 +5,7 @@
 <small>积热使然</small>。 疮痈人忌食。秦椒为使，恶黄连、黃芩、
 夜明砂。<small>糟姜纳入蝉蜕，虽老无筋</small>。姜皮，辛凉。和脾行水。治浮肿胀满。<small>以皮行皮，五皮散用之。成无己曰：“姜、枣辛甘，能行脾胃之律液而和营卫，不专于发散也。”东垣曰：夜不食姜者，夜主閤而姜主闢也。秋不食姜者，秋主收而姜主散也。妊妇多食，令儿歧指，象形也。</small>
 
-【讲解】（1）血痹：病名。指气血虛弱所致的痹证。主症为身体麻木不仁，肢节疼痛,脉微而涩紧。病由当风睡卧，或劳倦汗出，风邪乘虚侵入，使气血闭阻不通而致。（2）狐臭:病名。
+【讲解】（1）血痹：病名。指气血虚弱所致的痹证。主症为身体麻木不仁，肢节疼痛,脉微而涩紧。病由当风睡卧，或劳倦汗出，风邪乘虚侵入，使气血闭阻不通而致。（2）狐臭:病名。
 又名胡臭、体气、腋气。为湿热内郁或遗传所致。腋下汗液有特殊臭气。它处如乳晕、 脐部、外阴等亦可发生。 （ 3）山岚瘴气：
 又称瘴毒或瘴气。指南方山林间湿热郁蒸所产;的一种病邪。为疫疠的一种，通常多指疟疾。
 
@@ -20,7 +20,7 @@
 【临证应用】本品辛散发表，但为较弱，故多用于感冒之轻证，可煎汤加红糠热服。若外感风寒之重证，则加入辛温解表剂中，作为辅助药，以增强发汗作用，如桂枝汤。用于风寒犯肺，
 痰饮咳喘、胸脘痞胀，可与半夏、黄连等同用，如生姜泻心汤。生姜尤为呕吐要药，随酡伍之不同，可用于胃气上逆的多种呕吐和呃逆之证，常与半夏相配治胃寒之呕吐，即小半夏汤。呕吐偏于热者，则与黄连、竹茹等同用；与丁香、柿蒂配伍，治呃逆有良效。生姜与大枣同用，为调和营卫之剂，以生姜走外，味辛而和卫，大枣入里，味甘而调营，此即古人所说“和卫者必辛，调营者必甘"之意。因进食鱼蟹引起腹痛泄泻，或误食生半夏、生南星中毒而引起的喉舌麻痹，可捣姜汁服或煎汤内服。故姜制半夏、南星可减其毒性。
 
-【用量用法】3-10克， 煎汤服，或捣汁冲服。以其性辛温，故于阴虛内热及热盛之证宜忌用。
+【用量用法】3-10克， 煎汤服，或捣汁冲服。以其性辛温，故于阴虚内热及热盛之证宜忌用。
 
 **附:生姜汁** 辛散之力较强，功能祛痰止呕，多用于痰迷昏厥及呕吐不止之证。用量3-10滴，冲服。
 
