--- a/ok/bc/bc01-1.2.4.0.0.md
+++ b/ok/bc/bc01-1.2.4.0.0.md
@@ -13,7 +13,7 @@
 本品清香质轻，归肺经，可升散肺经风热；味苦性寒，入肝经，能清泄肝经邪热。苦中带甘，尚能养肝阴、平肝火。常用治外感风热，头痛目赤，或肝阳上亢，头晕目眩等证。所以《备要》
 说：能益金水二脏，以制火而平木。木平则风息，火降则热除。
 
-【临证应用】菊花治外感风热之发热头痛等证，常与桑叶相须为用，还可配薄荷、荆芥等，如桑菊饮即为常用之方。治目赤肿痛，常与桑叶、决明子等同用。亦可用于肝肾阴虛的眼目昏花,多同枸杞子，地黄等伍用，如杞菊地黄丸。肝阳上亢的头痛、
+【临证应用】菊花治外感风热之发热头痛等证，常与桑叶相须为用，还可配薄荷、荆芥等，如桑菊饮即为常用之方。治目赤肿痛，常与桑叶、决明子等同用。亦可用于肝肾阴虚的眼目昏花,多同枸杞子，地黄等伍用，如杞菊地黄丸。肝阳上亢的头痛、
 眩晕等证，与白芍、钩藤，石决明等配伍，则益增平肝息风之功。
 尚可晒干作枕用。
 
