--- a/ok/bc/bc03-0.5.3.0.0.md
+++ b/ok/bc/bc03-0.5.3.0.0.md
@@ -6,10 +6,10 @@
 
 **地骨皮善能凉血退蒸，又能清泄肺热**。为茄科落叶灌木植物枸杞的根皮。切段，生用。
 
-本品味甘性寒。入肺、肾二经。既能泻肺火，又善清虚热，为退热除蒸良药。主要用于阴虛血热，骨蒸潮热，盗汗和小儿疳积发热，以及邪热袭肺，肺失肃降，咳嗽气喘或咳血等证。本品能泻热而止烦渴，又可清血热，故可用于消渴尿多和血热妄行的吐血、衄血等证。性寒而降，脾胃虚寒及表邪发热者忌用。
+本品味甘性寒。入肺、肾二经。既能泻肺火，又善清虚热，为退热除蒸良药。主要用于阴虚血热，骨蒸潮热，盗汗和小儿疳积发热，以及邪热袭肺，肺失肃降，咳嗽气喘或咳血等证。本品能泻热而止烦渴，又可清血热，故可用于消渴尿多和血热妄行的吐血、衄血等证。性寒而降，脾胃虚寒及表邪发热者忌用。
 
 【临床应用】地骨皮善清虚热，用于阴虚血热，骨蒸潮热，盗汗等证，常与知母、鳖甲等同用，如地骨皮汤； 治肺热咳喘，常与桑白皮、甘草同用，如泻白散，共奏清肺泻热作用；用于血热吐血、衄血，多与侧柏叶、藕节、白茅根等凉血止血药同用，清血热而收止血之效。若与生地黄、天花粉等养阴生津药配伍，可治消渴尿多之证。此外，还能泄肾经虚火而止虚火牙痛。
 
-地骨皮与丹皮皆能清退虛热，同为治骨蒸之品，然地骨皮甘寒主在清泄，用于有汗之骨蒸；丹皮辛寒偏于清透，多用于无汗之骨蒸。正如《本草求真》所云：虽与丹皮同治骨蒸之剂，但丹皮味辛，能治无汗骨蒸，此属味甘，能治有汗骨蒸。且丹皮原属入血散瘀之品，汗者血也，无汗而见血瘀，则于辛于寒最宜。
+地骨皮与丹皮皆能清退虚热，同为治骨蒸之品，然地骨皮甘寒主在清泄，用于有汗之骨蒸；丹皮辛寒偏于清透，多用于无汗之骨蒸。正如《本草求真》所云：虽与丹皮同治骨蒸之剂，但丹皮味辛，能治无汗骨蒸，此属味甘，能治有汗骨蒸。且丹皮原属入血散瘀之品，汗者血也，无汗而见血瘀，则于辛于寒最宜。
 
 【用量用法】 6—15克，煎服。
